all ... are replaced by \ldots

--- a/probability_hse_exams.tex
+++ b/probability_hse_exams.tex
@@ -573,7 +573,7 @@ $=\theta-2\theta^{2}+\theta^{2}=\theta-\theta^{2}$ \\
 
 
 {\bf Задача 2} \\
-Пусть $X_{1}$, $X_{2}$, ..., $X_{n}$ независимы и их функции
+Пусть $X_{1}$, $X_{2}$, \ldots, $X_{n}$ независимы и их функции
 плотности имеет вид: \\
 $ f(x)=
 \left\{%
@@ -584,7 +584,7 @@ $ f(x)=
 \right.     $ \\
 Найдите оценки параметра $k$: \\
 а) [5] Методом максимального правдоподобия \\
-$L=(k+1)^{n}(x_{1}\cdot x_{2} \cdot...\cdot x_{n})^{k}$ \\
+$L=(k+1)^{n}(x_{1}\cdot x_{2} \cdot\ldots\cdot x_{n})^{k}$ \\
 $l=\ln{L}=n\ln(k+1)+k(\sum \ln{x_{i}})$ \\
 $\frac{dl}{dk}=\frac{n}{k+1}+\sum \ln{x_{i}}$ \\
 $\frac{n}{\hat{k}+1}+\sum \ln{x_{i}}=0$ \\
@@ -772,7 +772,7 @@ $\P(B|C)=\frac{\P(B)}{\P(C)}=\frac{0,7}{0,79}=\frac{70}{79}$ \\
 б) [10] Заметив закономерность, сформулируйте и докажите теорему
 Харди-Вайнберга для произвольного начального распределения
 генотипов. \\
-О чем молчал учебник биологии 9 класса... \\
+О чем молчал учебник биологии 9 класса\ldots \\
 Если: \\
 а) ген имеет всего две аллели; \\
 б) в популяции бесконечное число организмов; \\
@@ -782,7 +782,7 @@ $\P(B|C)=\frac{\P(B)}{\P(C)}=\frac{0,7}{0,79}=\frac{70}{79}$ \\
 Распределение генотипов стабилизируется уже в первом поколении
 (!!!). \\
 Т.е.
-$AA_{1}=AA_{2}=...$ и $Aa_{1}=Aa_{2}=...$. \\
+$AA_{1}=AA_{2}=\ldots$ и $Aa_{1}=Aa_{2}=\ldots$. \\
 Вероятность получить 'A' от родителя для рождающихся в поколении 1
 равна: $p_{1}=0,3\cdot 1+0,6\cdot 0,5 + 0,1\cdot 0=0,6$ \\
 В общем виде: $p_{1}=AA_{0}+0,5\cdot Aa_{0}$ \\
@@ -902,7 +902,7 @@ $\P(X=0)=e^{-4}$ \\
 5.1. \\
 \begin{tabular}{|c|c|c|c|c|}
   \hline
-  % after \\: \hline or \cline{col1-col2} \cline{col3-col4} ...
+  % after \\: \hline or \cline{col1-col2} \cline{col3-col4} \ldots
   $x_{i}$ & 1 & 2 & 3 & 4 \\
   \hline
   $\P(X=x_{i})$ & $0,6$& $(1-0,6)\cdot 0,5$ & $(1-0,6)\cdot(1-0,5)\cdot 0,4$ & $1-p_{1}-p_{2}-p_{3}$ \\
@@ -910,7 +910,7 @@ $\P(X=0)=e^{-4}$ \\
 \end{tabular} \\
 \begin{tabular}{|c|c|c|c|c|}
   \hline
-  % after \\: \hline or \cline{col1-col2} \cline{col3-col4} ...
+  % after \\: \hline or \cline{col1-col2} \cline{col3-col4} \ldots
   $x_{i}$ & 1 & 2 & 3 & 4 \\
   \hline
   $\P(X=x_{i})$ & $0,6$& $0,2$ & $0,08$ & $0,12$ \\
@@ -938,8 +938,8 @@ $\E(X^{2})=\int_{0}^{2}t^{2}\cdot p(t)dt=\int_{0}^{2}t^{2}\cdot
 
 $\E(X)=10=\frac{1}{\lambda}$, $\lambda=\frac{1}{10}$, $p(t)=\lambda
 e^{\lambda t}$ при $t>0$ \\
-$\P(X>15)=\int_{15}^{\infty}p(t)dt=...=e^{-\frac{3}{2}}$ \\
-$\P(X>25|X>10)=\frac{\P(X>25)}{\P(X>10)}=...=e^{-\frac{3}{2}}$ \\
+$\P(X>15)=\int_{15}^{\infty}p(t)dt=\ldots=e^{-\frac{3}{2}}$ \\
+$\P(X>25|X>10)=\frac{\P(X>25)}{\P(X>10)}=\ldots=e^{-\frac{3}{2}}$ \\
 
 Дополнительная задача: \\
 Пусть случайные величины $X_{1}$ и $X_{2}$ независимы и равномерно
@@ -1053,7 +1053,7 @@ $\E(X)=\int_{0}^{1}\int_{0}^{1}x(x+y)dxdy=\frac{7}{12}$ $[5]$\\
 В супермаркете «Покупан» продаются различные вина: \\
 \begin{tabular}{|c|c|c|c|}
   \hline
-  % after \\: \hline or \cline{col1-col2} \cline{col3-col4} ...
+  % after \\: \hline or \cline{col1-col2} \cline{col3-col4} \ldots
   Вина & Доля & Средняя цена за бутылку (у.е.) & Стандартное отклонение (у.е.) \\
   \hline
   Элитные & 0,1 & 150 & 24 \\
@@ -1071,7 +1071,7 @@ $\E(X)=\int_{0}^{1}\int_{0}^{1}x(x+y)dxdy=\frac{7}{12}$ $[5]$\\
 Используя метод множителей Лагранжа: \\
 $L=\frac{(0.1\cdot 24)^{2}}{a}+\frac{(0.3\cdot
 12)^{2}}{b}+\frac{(0.6\cdot 10)^{2}}{c}+\lambda(10-a-b-c)$\\
-... \\
+\ldots \\
 $a=2$, $b=3$, $c=5$, можно было использовать готовую формулу
 $n_{i}=\frac{w_{i}\sigma_{i}}{\sum w_{j}\sigma_{j}}$ \\
 $\Var(\bar{X}^{s})=14,4$ \\
@@ -1187,9 +1187,9 @@ $e_{97}=\frac{1}{100}e_{98}+\frac{1}{100}e_{99}+\frac{98}{100}e_{100}+1=(1+\frac
 \\
 $e_{96}=\frac{1}{100}e_{97}+\frac{1}{100}e_{98}+\frac{1}{100}e_{99}+\frac{97}{100}e_{100}+1=(1+\frac{1}{100})^{3}$
 \\
-... \\
+\ldots \\
 По индукции легко доказать, что $e_{n}=(1+\frac{1}{100})^{99-n}$ \\
-Таким образом, $e_{0}=(1+\frac{1}{100})^{99}=2.718...$ \\
+Таким образом, $e_{0}=(1+\frac{1}{100})^{99}=2.718\ldots$ \\
 
 Требуется решить \textbf{\underbar{одну}} из двух 11-х задач по
 выбору! \\
@@ -1483,7 +1483,7 @@ B)$, если обе вероятности существуют. Да.  \\
 
 10. Для неотрицательной случайной величины $\E(X)\ge \E(-X)$. Да. \\
 
-11. Вероятность бывает отрицательной. Даже не знаю, что и сказать... \\
+11. Вероятность бывает отрицательной. Даже не знаю, что и сказать\ldots \\
 
 
 $[$правильно=+1 балл; нет ответа=неправильно=0 баллов$]$ \\
@@ -1965,7 +1965,7 @@ $Y_{i}=F-F_{i}-X_{i}$ \\
 $Y=(n-1)F-MF=(n-1)F-nF+F^{2}=F^{2}-F$ \\
 Далее берем матожидание (легко) и дисперсию (громоздко): \\
 $\E(X)=\E(Y)=\frac{n(n-1)}{4}$ \\
-... (если кто решил до сих пор, то наверняка, он смог и дальше решить) ...\\
+\ldots (если кто решил до сих пор, то наверняка, он смог и дальше решить) \ldots\\
 
 
 \emph{Подсказка}: Думайте! \\
@@ -1999,7 +1999,7 @@ $\E(X)=\E(Y)=\frac{n(n-1)}{4}$ \\
 том, что выбор учебника не меняет закона распределения оценки. \\
 
 \textbf{Задача 3} \\ % числа выверены
-Имеется случайная выборка $X_{1}$, $X_{2}$, ..., $X_{n}$, где все $X_{i}$ имеют распределение, задаваемое табличкой: \\
+Имеется случайная выборка $X_{1}$, $X_{2}$, \ldots, $X_{n}$, где все $X_{i}$ имеют распределение, задаваемое табличкой: \\
 \begin{tabular}{c|ccc}
 X & 1 & 2 & 5 \\
 \hline
@@ -2011,7 +2011,7 @@ P & a & 0.1 & 0.9-a \\
 Демо-версия! \\
 
 \textbf{Задача 4} \\ % числа выверены
-Имеется случайная выборка $X_{1}$, $X_{2}$, ..., $X_{n}$, где все $X_{i}$ имеют $N(27,a)$ распределение. \\
+Имеется случайная выборка $X_{1}$, $X_{2}$, \ldots, $X_{n}$, где все $X_{i}$ имеют $N(27,a)$ распределение. \\
 Найдите оценку неизвестного $a$ методом максимального правдоподобия \\
 Напоминалка: не забудьте проверить условия второго порядка \\
 
@@ -2043,15 +2043,15 @@ P & a & 0.1 & 0.9-a \\
 На Древе познания Добра и Зла растет 6 плодов познания Добра и 5 плодов познания Зла. Адам и Ева съели по 2 плода. Какова вероятность того, что Ева познала Зло, если Адам познал Добро? \\
 
 \textbf{Задача 8} \\ % числа выверены
-Пусть $X_{i}$ - независимы и имеют функцию плотности $p(t)=e^{a-t}$ при $t>a$, где $a$ - неизвестный параметр. В качестве оценки неизвестного $a$ используется $\hat{a}_{n}=\min\{X_{1},X_{2},...,X_{n}\}$. \\
+Пусть $X_{i}$ - независимы и имеют функцию плотности $p(t)=e^{a-t}$ при $t>a$, где $a$ - неизвестный параметр. В качестве оценки неизвестного $a$ используется $\hat{a}_{n}=\min\{X_{1},X_{2},\ldots,X_{n}\}$. \\
 а) Является ли предлагаемая оценка состоятельной? \\
 б) Является ли предлагаемая оценка несмещенной? \\
 
 Solution of 8: \\
 Заметим, что $\hat{a}_{n}\geq a$. \\
-$\P(|\hat{a}_{n}-a|>\varepsilon)=\P(\hat{a}_{n}-a>\varepsilon)=\P(\hat{a}_{n}>a+\varepsilon)=\P(\min\{X_{1},X_{2},...,X_{n}\}>a+\varepsilon)= \\
-=\P(X_{1}>a+\varepsilon \cap X_{2}> a+\varepsilon\cap ...)=
-\P(X_{1}>a+\varepsilon)\cdot \P(X_{2}>a+\varepsilon)\cdot ...=
+$\P(|\hat{a}_{n}-a|>\varepsilon)=\P(\hat{a}_{n}-a>\varepsilon)=\P(\hat{a}_{n}>a+\varepsilon)=\P(\min\{X_{1},X_{2},\ldots,X_{n}\}>a+\varepsilon)= \\
+=\P(X_{1}>a+\varepsilon \cap X_{2}> a+\varepsilon\cap \ldots)=
+\P(X_{1}>a+\varepsilon)\cdot \P(X_{2}>a+\varepsilon)\cdot \ldots=
 \left(\int_{a+\varepsilon}^{\infty}e^{a-t}dt\right)^{n}=\left(e^{-\varepsilon}\right)^{n}=e^{-n\varepsilon}$ \\
 $\lim_{n\to\infty} e^{-n\varepsilon} =0$ \\
 б) нет, не является ни при каких $n$, хотя смещение с ростом $n$ убывает \\
@@ -2143,7 +2143,7 @@ $Z=\frac{0.32-0.5}{\sqrt{\frac{0.5\cdot 0.5}{25}}}=-1.8$ \\
 $H_{0}$ - не отвергается. \\
 
 \textbf{Задача 3} \\ % числа выверены
-Имеется случайная выборка $X_{1}$, $X_{2}$, ..., $X_{n}$, где все $X_{i}$ имеют распределение, задаваемое табличкой: \\
+Имеется случайная выборка $X_{1}$, $X_{2}$, \ldots, $X_{n}$, где все $X_{i}$ имеют распределение, задаваемое табличкой: \\
 \begin{tabular}{|c|c|c|c|}
 \hline
 X & 1 & 2 & 5 \\
@@ -2159,7 +2159,7 @@ b) да, является \\
 
 
 \textbf{Задача 4} \\ % числа выверены
-Имеется случайная выборка $X_{1}$, $X_{2}$, ..., $X_{n}$, где все $X_{i}$ имеют $N(a,4a)$ распределение. \\
+Имеется случайная выборка $X_{1}$, $X_{2}$, \ldots, $X_{n}$, где все $X_{i}$ имеют $N(a,4a)$ распределение. \\
 Найдите оценку неизвестного $a$ методом максимального правдоподобия $[8]$  \\
 Напоминалка: не забудьте проверить условия второго порядка $[2]$ \\
 Решение: \\
@@ -2193,14 +2193,14 @@ b) $p=\frac{0.7\cdot0.8\cdot0.2}{0.7\cdot 0.8\cdot 0.2 + 0.7\cdot 0.2 \cdot 0.3}
 
 
 \textbf{Задача 8} \\ % числа выверены
-Пусть $X_{i}$ - независимы и распределены равномерно на $[a-1;a]$, где $a$ - неизвестный параметр. В качестве оценки неизвестного $a$ используется $\hat{a}_{n}=\max\{X_{1},X_{2},...,X_{n}\}$. \\
+Пусть $X_{i}$ - независимы и распределены равномерно на $[a-1;a]$, где $a$ - неизвестный параметр. В качестве оценки неизвестного $a$ используется $\hat{a}_{n}=\max\{X_{1},X_{2},\ldots,X_{n}\}$. \\
 а) Является ли предлагаемая оценка состоятельной? $[8]$ \\
 б) Является ли предлагаемая оценка несмещенной? $[2]$ \\
 Solution: \\
 Заметим, что $\hat{a}_{n}\leq a$. \\
-$\P(|\hat{a}_{n}-a|>\varepsilon)=\P(-(\hat{a}_{n}-a)>\varepsilon)=\P(\hat{a}_{n}<a-\varepsilon)=\P(\max\{X_{1},X_{2},...,X_{n}\}<a-\varepsilon)= \\
-=\P(X_{1}<a-\varepsilon \cap X_{2}< a-\varepsilon\cap ...)=
-\P(X_{1}<a-\varepsilon)\cdot \P(X_{2}<a-\varepsilon)\cdot ...=(1-\varepsilon)^{n}$ \\
+$\P(|\hat{a}_{n}-a|>\varepsilon)=\P(-(\hat{a}_{n}-a)>\varepsilon)=\P(\hat{a}_{n}<a-\varepsilon)=\P(\max\{X_{1},X_{2},\ldots,X_{n}\}<a-\varepsilon)= \\
+=\P(X_{1}<a-\varepsilon \cap X_{2}< a-\varepsilon\cap \ldots)=
+\P(X_{1}<a-\varepsilon)\cdot \P(X_{2}<a-\varepsilon)\cdot \ldots=(1-\varepsilon)^{n}$ \\
 $\lim_{n\to\infty} (1-\varepsilon)^{n} =0$ \\
 б) нет, не является ни при каких $n$, хотя смещение с ростом $n$ убывает \\
 
@@ -2428,7 +2428,7 @@ $[$правильно=+1 балл; нет ответа=неправильно=0 
 %3. Условная вероятность
 %4. Экспоненциальное распределение (или про функцию плотности), вер, увер, ожид
 %5. Биномиальное и Пуассон
-%6. Математическое ожидание с параметром (при каком параметре...)
+%6. Математическое ожидание с параметром (при каком параметре\ldots)
 %7. Разложение в сумму или муторные вычисления
 %8. Сложный эксперимент - вер, ожидание, макс. веро-сть
 % прочее - свойства Е, Вар, Ков
@@ -2727,7 +2727,7 @@ $\left(\begin{array}{cc} {9} & {-4,5} \\ {-4,5} & {25}
 Определите, в каких границах может лежать $\P(\frac{(X-30)^{2}}{\Var(X)}<3)$, если известно, что $\E(X)=30$. Можно ли уточнить ответ, если дополнительно известно, что $X$ - экспоненциально распределена. \\
 
 \textbf{Задача 5} \\ % числа выверены
-Предположим, что величины $X_{1}$, $X_{2}$, ..., $X_{13}$ - независимы и распределены нормально $N(\mu,\sigma^{2})$. Найдите число $a$, если известно, что $\P( \sum (X_{i}-\bar{X})^{2}>a\sigma^{2})=0.1$. \\
+Предположим, что величины $X_{1}$, $X_{2}$, \ldots, $X_{13}$ - независимы и распределены нормально $N(\mu,\sigma^{2})$. Найдите число $a$, если известно, что $\P( \sum (X_{i}-\bar{X})^{2}>a\sigma^{2})=0.1$. \\
 
 \textbf{Задача 6} \\
 Предположим, что оценки студентов на экзамене распределены равномерно на отрезке $[0;a]$. Вася хочет оценить вероятность того, что отдельно взятый студент наберет больше 30 баллов. Васе известно, что экзамен сдавали 100 человек и 15 из них набрали более 60 баллов. Помогите Васе построить несмещенную оценку! \\
@@ -2836,15 +2836,15 @@ $\int_{0}^{1}\int_{0}^{1}y\cdot p(x,y)dydx=13/24$ \\
 
 \textbf{Задача 2} \\ % числа выверены
 Пусть $X_{i}$ - независимы и одинаково распределены, причем $\E(X_{i})=0$, $\Var(X_{i})=1$ и $\Var(X_{i}^{2})=2$ \\
-а) С помощью неравенства Чебышева оцените $\P(|X_{1}+X_{2}+...+X_{7}|>14)$ и $\P(X_{1}^{2}+X_{2}^{2}+...+X_{7}^{2}>14)$ \\
+а) С помощью неравенства Чебышева оцените $\P(|X_{1}+X_{2}+\ldots+X_{7}|>14)$ и $\P(X_{1}^{2}+X_{2}^{2}+\ldots+X_{7}^{2}>14)$ \\
 б) Найдите эти вероятности, если дополнительно известно, что $X_{i}$ - нормально распределены. \\
 Sol: \\
 а) $[2+2]$ \\
-$\P(|X_{1}+X_{2}+...+X_{7}|>14)\leq \frac{7}{14^2}=\frac{1}{28}$ \\
-$\P(X_{1}^{2}+...+X_{7}^{2}>14)=\P(X_{1}^{2}+...+X_{7}^{2}-7>7)=\P(|X_{1}^{2}+...+X_{7}^{2}-7|>7)\leq \frac{2\cdot 7}{7^2}=\frac{2}{7}$ \\
+$\P(|X_{1}+X_{2}+\ldots+X_{7}|>14)\leq \frac{7}{14^2}=\frac{1}{28}$ \\
+$\P(X_{1}^{2}+\ldots+X_{7}^{2}>14)=\P(X_{1}^{2}+\ldots+X_{7}^{2}-7>7)=\P(|X_{1}^{2}+\ldots+X_{7}^{2}-7|>7)\leq \frac{2\cdot 7}{7^2}=\frac{2}{7}$ \\
 б) $[3+3]$ \\
-$\P(|X_{1}+...+X_{7}|>14)=\P(|N(0;1)|>14/\sqrt{7})=\P(|N(0;1)|>5.29)\approx 0$ \\
-$\P(X_{1}^{2}+X_{2}^{2}+...+X_{7}^{2}>14)\approx 0.05$ \\
+$\P(|X_{1}+\ldots+X_{7}|>14)=\P(|N(0;1)|>14/\sqrt{7})=\P(|N(0;1)|>5.29)\approx 0$ \\
+$\P(X_{1}^{2}+X_{2}^{2}+\ldots+X_{7}^{2}>14)\approx 0.05$ \\
 
 \textbf{Задача 3} \\ % числа выверены
 Случайный вектор  $\left(\begin{array}{c}
@@ -2887,7 +2887,7 @@ $\hat{\beta}_{1}=\frac{4}{9}XY$ \\
 $\hat{\beta}_{2}=\frac{1}{9}Y^{2}$ \\
 Т.к. обе оценки несмещенные вместо сравнения дисперсий можно сравнить квадраты ожиданий \\
 $\frac{16}{81}\E(X^{2}Y^{2})$ vs $\frac{1}{81}\E(Y^{4})$ \\
-... \\
+\ldots \\
 $16 a^4$ vs $\frac{81}{5} a^{4}$ \\
 Дисперсия васиной оценки меньше. \\
 
@@ -2987,7 +2987,7 @@ Solution: \\
 3. Начинаем: \\
 $s(1)=1$, $e(1)=1/(1-p)$ \\
 $s(n)=argmin_{a}(1/(1-p)^{a}+e(n-a))$, $e(n)=min_{a}(1/(1-p)^{a}+e(n-a))$ \\
-Замечаем, что поначалу (где-то до $1/p$ шашек) все идет хорошо, а затем плохо... \\
+Замечаем, что поначалу (где-то до $1/p$ шашек) все идет хорошо, а затем плохо\ldots \\
 4. Ищем упрощенное решение вида $s(n)=s$. \\
 Ожидаемое число переносок равно $\frac{1000}{s}\frac{1}{(1-p)^{s}}$ \\
 Минимизируем по $s$. Получаем: $s=-1/ln(1-p)\approx 1/p$. \\
@@ -3113,7 +3113,7 @@ $[$правильно=+1 балл; нет ответа=неправильно=0 
 
 
 \textbf{Задача 8} \\
-Известно, что величины $X_{1}$, ..., $X_{n}$ независимы и равномерны на $[0;b]$. Пусть $Y$- это минимум этих $n$ величин. Вася знает $n$ и $Y$. \\
+Известно, что величины $X_{1}$, \ldots, $X_{n}$ независимы и равномерны на $[0;b]$. Пусть $Y$- это минимум этих $n$ величин. Вася знает $n$ и $Y$. \\
 а) Найдите оценку $b$ методом моментов. \\
 б) Является ли полученная оценка несмещенной? \\
 
@@ -3150,7 +3150,7 @@ $[$правильно=+1 балл; нет ответа=неправильно=0 
 
 
 \textbf{Задача 13} \\
-Величины $X_{1}$, $X_{2}$, ..., $X_{100}$ независимы и распределены $N(10,16)$. Вася знает дисперсию, но не знает среднего. Поэтому он строит 60\% доверительный интервал для истинного среднего значения. Какова вероятность того, что:\\
+Величины $X_{1}$, $X_{2}$, \ldots, $X_{100}$ независимы и распределены $N(10,16)$. Вася знает дисперсию, но не знает среднего. Поэтому он строит 60\% доверительный интервал для истинного среднего значения. Какова вероятность того, что:\\
 а) Доверительный интервал накрывает настоящее среднее? \\
 б) Доверительный интервал накрывает число 9? \\
 
@@ -3366,9 +3366,9 @@ $Цена наблюдения $&150 & 40& 15 \\
 
 С помощью теста Манна-Уитни (Вилкоксона) проверьте гипотезу о том, что выбор учебника не меняет закона распределения оценки.
 
-\item Случайная величина $X$, характеризующая срок службы элементов электронной аппаратуры, имеет распределение Релея: $F(x)=1-e^{-x^2/\theta}$ при $x\geq 0$. По случайной выборке $X_1$, $X_2$, ..., $X_n$ найдите оценку максимального правдоподобия параметра $\theta$.
+\item Случайная величина $X$, характеризующая срок службы элементов электронной аппаратуры, имеет распределение Релея: $F(x)=1-e^{-x^2/\theta}$ при $x\geq 0$. По случайной выборке $X_1$, $X_2$, \ldots, $X_n$ найдите оценку максимального правдоподобия параметра $\theta$.
 
-\item По случайной выборке $X_1$, $X_2$, ..., $X_n$ из равномерного на интервале $[\theta;\theta+10]$ распределения методом моментов найдите оценку параметра $\theta$. Дайте определение несмещенности и состоятельности оценки и определите, будет ли обладать этими свойствами найденная оценка.
+\item По случайной выборке $X_1$, $X_2$, \ldots, $X_n$ из равномерного на интервале $[\theta;\theta+10]$ распределения методом моментов найдите оценку параметра $\theta$. Дайте определение несмещенности и состоятельности оценки и определите, будет ли обладать этими свойствами найденная оценка.
 
 \item При расчете страхового тарифа страховая компания предполагает, что вероятность наступления страхового случая 0.005. По итогам прошедшего года из 10000 случайно выбранных договоров страховых случаев наблюдалось 67.
 \begin{enumerate}
@@ -3554,7 +3554,7 @@ $\P\ofbr{X<\sqrt2}$, $\P\left(\left\{ \frac{|X|}{\sqrt{Y^2+Z^2}}>1\right\}\right
 \subsection{Контрольная работа №1, 24.10.2011}
 
 \textbf{Quote}\\
-...all models are approximations. Essentially, all models are wrong, but some are useful. However, the approximate nature of the model must always be borne in mind...\\
+\ldots all models are approximations. Essentially, all models are wrong, but some are useful. However, the approximate nature of the model must always be borne in mind\ldots\\
 George Edward Pelham Box\\
 
 \textbf{УДАЧИ!} \\
@@ -3887,7 +3887,7 @@ f(x,y)=\begin{cases}
 
 Ответы:
 \begin{enumerate}
-\item $\P(X+Y>1)=4/5$. Здесь нужно брать интеграл...
+\item $\P(X+Y>1)=4/5$. Здесь нужно брать интеграл\ldots
 \item $\E(X)=13/20=0{,}65$, $\E(XY)=2/5=0{,}4$, $\Cov(X,Y)=-9/400=-0{,}0225$
 \item Нет, так как функция плотности не раскладывается в произведение $h(x)\cdot g(y)$.
 \item Да, так как функция плотности симметрична по $x$ и $y$
@@ -4157,56 +4157,56 @@ bc=-1
 \subsection{Контрольная работа №3, 13.03.2012, решения}
 
 \begin{enumerate}
-	\item 
+	\item
 		\begin{enumerate}
-			
+
 			\item $L (x, \lambda) = \prod_{i=1}^{n}\lambda e^{-\lambda x_i} = \lambda^n e^{-\lambda \sum_{i=1}^{n}x_i}$
-			
+
 			$\ln L (x, \lambda) = n\ln\lambda - \lambda\sum_{i=1}^n x_i \to \max_\lambda$
-			
+
 			$\frac{\partial \ln L}{\partial \lambda} = \frac{n}{\lambda} - \sum_{i=1}^{n}x_i \mid_{\lambda = \hat{\lambda}} = 0 \Rightarrow \hat{\lambda}_{ML} = \frac{1}{\overline{X}}$
-			
+
 			$\frac{\partial^2 \ln L}{\partial \lambda^2} = -\frac{n}{\lambda^2} \mid_{\lambda=\hat{\lambda}} < 0$
-			
+
 			\item $\hat{a} = \overline{X}$
-			
+
 			\item $\mathbb{E}(\hat{a}) = \mathbb{E}(\overline{X}) = \frac{1}{\lambda} \Rightarrow$  несмещённая
-			
+
 			\item $\Var(\hat{a}) = \Var(\overline{X}) = \frac{1}{n}n\Var(X_i) = \frac{1}{n\lambda^2} \to_{n-\to\infty} 0 \Rightarrow$ состоятельная
-			
-			\item   
-			
+
+			\item
+
 			\item $\mathbb{E}(X) = \frac{1}{\lambda} \mid_{\lambda = \hat{\lambda}_{MM}} = \overline{X} \Rightarrow \lambda_{MM} = \frac{1}{\overline{X}}$
 		\end{enumerate}
-		
+
 	\item
 		\begin{enumerate}
 			\item Истинное стандартное отклонение неизвестно, поэтому используем распределение Стьюдента:
-			
+
 			$\overline{X} - t_{0.025, 99}\frac{\hat{\sigma}}{\sqrt{n}} < \mu < \overline{X} + t_{0.025, 99}\frac{\hat{\sigma}}{\sqrt{n}}$
-			
+
 			$9.5 - 1.98 \frac{0.5}{\sqrt{100}} < \mu < 9.5 - 1.98 \frac{0.5}{\sqrt{100}} $
-			
+
 			$9.4 < \mu < 9.6$
-			
+
 			\item  Значение 10 не лежит в доверительном интервале, значит, гипотеза отвергается
-			
+
 			$t_{obs} = \frac{9.5-10}{0.5/\sqrt{100}} = 10 \Rightarrow \text{p-value} \approx 0$
-			
+
 		\end{enumerate}
-	
-	\item 
+
+	\item
 		\begin{enumerate}
 			\item $\frac{\hat{\sigma}_\alpha^2}{\hat{\sigma}_\beta^2} \sim F_{n_{\alpha-1}, n_{\beta-1}}$
-			
+
 			$F_{obs} = \frac{0.5}{0.6} \approx 0.83$, $\text{p-value}/ 2\approx 0.35 \Rightarrow$ на любом разумном уровне значимости оснований отвергать $H_0$ нет
-			
+
 			\item $\hat{\sigma}_0^2 = \frac{\hat{\sigma}_\alpha^2(n_\alpha -1) + \hat{\sigma}_\beta^2(n_\beta-1)}{n_\alpha+n_\beta-2} = \frac{0.25\cdot19 + 0.36\cdot24}{20+25-2}=0.31$
-			
+
 			$\frac{\overline{X} - \overline{Y}}{\hat{\sigma}_0 \sqrt{\frac{1}{n_\alpha}+\frac{1}{n_\beta}}} \sim t_{n_\alpha+n_\beta-2}$
-			
+
 			$t_{obs} = \frac{9.5-9.8}{0.56\sqrt{\frac{1}{20}+ \frac{1}{25}}} = -1.79$, $\text{p-value}/2=0.04$
-			
+
 			* В этой задаче p-value посчитаны в R
 		\end{enumerate}
 \end{enumerate}
@@ -4240,7 +4240,7 @@ bc=-1
 \item Ровно один из ответов — верный
 \item В графу «Ответ» требуется вписать номер правильного ответа
 \item Неправильные ответы не штрафуются.
-\item Если Вы считаете, что на вопрос нет правильного ответа или есть несколько правильных ответов, то... возрадуйтесь! Ибо такой вопрос будет засчитан всем как верный.
+\item Если Вы считаете, что на вопрос нет правильного ответа или есть несколько правильных ответов, то\ldots возрадуйтесь! Ибо такой вопрос будет засчитан всем как верный.
 \item Было дано 45 минут. Возможно это было много.
 \item Удачи!
 \end{enumerate}
@@ -4518,7 +4518,7 @@ $H_{A}$: $\mu =30$  по выборке из 20 наблюдений. Крите
 
 
 
-И Последняя задача...
+И Последняя задача\ldots
 
 \item Пирсон придумал хи-квадрат тест на независимость признаков около 1900 года. При этом он не был уверен в правильном количестве степеней свободы. Он разошелся во мнениях с Фишером. Фишер считал, что для таблицы два на два хи-квадрат статистика будет иметь три степени свободы, а Пирсон — что одну. Чтобы выяснить истину, Фишер взял большое количество таблиц два на два с заведомо независимыми признаками и посчитал среднее значение хи-квадрат статистики.
 \begin{enumerate}
@@ -4608,8 +4608,6 @@ I_n=\E\left(\left(\frac{d\ln L(X_1;X_2;\ldots;X_n;\lambda)}{d\lambda}\right)^2\r
 \end{multline}
 
 \end{enumerate}
-
-
 
 \section{2012-2013}
 
@@ -4973,11 +4971,11 @@ f(x,y)=\frac{1}{x}e^{-x},\: \text{при}\: 0<y<x
 Продолжительность 1 час 10 минут, разрешено пользоваться конспектами, книжками, заготовками программ, нельзя общаться, использовать Интернет. Текст работы в группах с R:
 
 \begin{enumerate}
-\item Величины $X$ и $Y$ независимы. Величина $X$ распределена нормально, $X\sim N(4.4,6.6)$, величина $Y$ распределена экспоненциально, $Y\sim exp(\lambda=2.1)$. Используя симуляционный подход примерно посчитайте
+\item Величины $X$ и $Y$ независимы. Величина $X$ распределена нормально, $X\sim N(4.7,6.9)$, величина $Y$ распределена экспоненциально, $Y\sim exp(\lambda=2.5)$. Используя симуляционный подход примерно посчитайте
 
 \begin{enumerate}
-\item $\P(X+Y>5.2)$
-\item $\E(X/(X+7Y))$
+\item $\P(X+Y>5.1)$
+\item $\E(X/(X+5Y))$
 \item $\Var(XY)$
 \item $\Cov(XY,X/Y)$
 \end{enumerate}
@@ -5138,7 +5136,7 @@ $\P()$ & $0.4$ & $0.2$ & $?$ \\
 {$X$ и $Y$ независимы} \\ \\
 
 %16
-\item $Z_1,Z_2,...,Z_n\sim\N(0,1)$. Тогда величина $\frac{Z_1\sqrt{n-2}}{\sqrt{\sum_{i=3}^n Z_i^2}}$ имеет распределение
+\item $Z_1,Z_2,\ldots,Z_n\sim\N(0,1)$. Тогда величина $\frac{Z_1\sqrt{n-2}}{\sqrt{\sum_{i=3}^n Z_i^2}}$ имеет распределение
 
 \otvet {$N(0,1)$}{$t_n$}{$F_{1,n-2}$}{$\chi^2_n$}{$t_{n-2}$}
 
@@ -5252,7 +5250,7 @@ $\P()$ & $0.4$ & $0.2$ & $?$ \\
 \item В таблице представлены данные по количеству пассажиров «Титаника», поделенные на группы по классу каюты:
 
 % latex table generated in R 3.4.0 by xtable 1.8-2 package
-% Fri Sep 22 21:54:05 2017
+% Fri Sep 22 21:58:48 2017
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrr}
@@ -6414,7 +6412,7 @@ $\Cov(X,Y) = \E[XY] - \E[X]\E[Y] = 0 - 0 \cdot 0 = 0$.
 \otvet{N(0,1)}{$t_2$}{N(0,5)}{N(0,2)}{U[0;2]}
 
 %18
-\item $Z_1,Z_2,...,Z_n\sim N(0,1)$. Тогда величина $\frac{Z_1\sqrt{n-2}}{\sqrt{\sum_{i=3}^n Z_i^2}}$ имеет распределение
+\item $Z_1,Z_2,\ldots,Z_n\sim N(0,1)$. Тогда величина $\frac{Z_1\sqrt{n-2}}{\sqrt{\sum_{i=3}^n Z_i^2}}$ имеет распределение
 
 \otvet {$N(0,1)$}{$t_n$}{$F_{1,n-2}$}{$\chi^2_n$}{$t_{n-2}$}
 
@@ -8071,7 +8069,7 @@ f_Y(y) = \int \limits_{0}^{1-y} f_{XY}(x,y) dx
 С помощью неравенства Чебышева:
 \[ \P \left( |\hat{p} - p| \leqslant 0.1 \right) \geqslant 0.99 \]
 \[ \P \left( |\hat{p} - p| \geqslant 0.1 \right) \leqslant 0.01 \]
-Теперь просто смотрим на неравенство Чебышева и на строчку выше, на неравенство Чебышева и на строчку выше...
+Теперь просто смотрим на неравенство Чебышева и на строчку выше, на неравенство Чебышева и на строчку выше\ldots
 \[ \dfrac{p(1-p)/n}{0.1^2} = 0.01\]
 \[ n = 10^4 p(1-p) \]
 Принимаются оба ответа!
