--- a/probability_hse_exams.tex
+++ b/probability_hse_exams.tex
@@ -219,15 +219,6 @@
 \item Какова вероятность того, что день будет ясный, если Вовочка спрогнозировал ясный?
 \end{enumerate}
 
-Ответы:
-\begin{enumerate}
-\item $\P(A)=0.8\cdot 0.3+0.7\cdot 0.2=0.38$
-\item $\P(B)=0.9$
-\item $\P(C|A)=\frac{0.3\cdot 0.8}{0.38}=0.632$
-\item $\P(C|D)=\frac{0.3\cdot (0.9\cdot 0.8+0.1\cdot 0.2)}{0.9\cdot 0.38+0.1\cdot (1-0.38)}=0.55$
-\end{enumerate}
-
-
 \item Машин результат за контрольную, $M$, равномерно распределен на отрезке $[0;1]$. Вовочка ничего не знает, поэтому списывает у Маши, да ещё может наделать ошибок при списывании. Поэтому Вовочкин результат, $V$, распределен равномерно от нуля до Машиного результата.
 \begin{enumerate}
 \item Найдите $\P(M>2V)$, $\P(M>V+0.1)$
@@ -236,7 +227,6 @@
 Подсказка: попробуйте нарисовать нужные события в осях $(V,M)$
 
 Это была задачка-неберучка!
-
 
 \item Функция плотности случайной величины $X$ имеет вид $f(x)=\left\{\begin{array}{l}
 \frac{3}{7}x^2,\, x\in[1;2] \\
@@ -247,16 +237,6 @@
 \item Найдите $\E(X)$, $\E(X^2)$ и дисперсию $\Var(X)$
 \item Найдите $\P(X>1.5)$
 \item Найдите функцию распределения $F(x)$ и постройте её график
-\end{enumerate}
-
-Ответы:
-\begin{enumerate}
-\item $1$
-\item $\E(X)=45/28\approx 1.61$, $\E(X^2)=93/35\approx 2.66$, $\Var(X)=291/3920\approx 0.07$
-\item $37/56\approx 0.66$
-\item $F(x)=\begin{cases} 0,\, x<1 \\
-\frac{x^3-1}{7},\, x\in [1;2] \\
-1,\, x>1 \end{cases}$
 \end{enumerate}
 
 \item Совместное распределение случайных величин $X$ и $Y$ задано таблицей
@@ -275,29 +255,51 @@ $Y=2$ & 0.1 & 0.2 & $a$ \\
 \item Найдите корреляцию $\Corr(X,Y)$
 \end{enumerate}
 
-Ответы:
-\begin{enumerate}
-\item $a=0.1$, [1]
-\item $\P(X>-1)=0.7$, $\P(X>Y)=0.1$ [3]
-\item $\E(X)=-0.2$, $\E(X^2)=2$ [3]
-\item $\Corr(X,Y)=0.117$ [3]
-\end{enumerate}
-
 \item Винни Пух собрался полакомиться медом, но ему необходимо принять решение, к каким пчелам отправиться за медом. Неправильные пчелы кусают каждого, кто лезет к ним на дерево с вероятностью 0,9, но их всего 10 штук. Правильные пчелы кусаются с вероятностью 0,1, но их 100 штук.
 \begin{enumerate}
 \item  Определите математическое ожидание и дисперсию числа укусов Винни Пуха для каждого случая
 \item Определите наиболее вероятное число укусов и его вероятность для каждого случая
 \item К каким пчелам следует отправиться Винни Пуху, если он не может выдержать больше двух укусов?
 \end{enumerate}
+\end{enumerate}
 
-Ответы:
+
+
+\subsection{Контрольная работа №1, 14.11.2012, решения}
+
+\begin{enumerate}
+\item
+\begin{enumerate}
+\item $\P(A)=0.8\cdot 0.3+0.7\cdot 0.2=0.38$
+\item $\P(B)=0.9$
+\item $\P(C|A)=\frac{0.3\cdot 0.8}{0.38}=0.632$
+\item $\P(C|D)=\frac{0.3\cdot (0.9\cdot 0.8+0.1\cdot 0.2)}{0.9\cdot 0.38+0.1\cdot (1-0.38)}=0.55$
+\end{enumerate}
+\item Это была задачка-неберучка!
+\item
+\begin{enumerate}
+\item $1$
+\item $\E(X)=45/28\approx 1.61$, $\E(X^2)=93/35\approx 2.66$, $\Var(X)=291/3920\approx 0.07$
+\item $37/56\approx 0.66$
+\item $F(x)=\begin{cases} 0,\, x<1 \\
+\frac{x^3-1}{7},\, x\in [1;2] \\
+1,\, x>1 \end{cases}$
+\end{enumerate}
+\item
+\begin{enumerate}
+\item $a=0.1$
+\item $\P(X>-1)=0.7$, $\P(X>Y)=0.1$
+\item $\E(X)=-0.2$, $\E(X^2)=2$
+\item $\Corr(X,Y)=0.117$
+\end{enumerate}
+\item
 \begin{enumerate}
 \item Правильные: $\E(X)=10$, $\Var(X)=9$, Неправильные: $\E(Y)=9$, $\Var(Y)=0.9$
 \item Наиболее вероятное число укусов равно математическому ожиданию
-\item Лучше идти к неправильным пчёлам, т.к. $\P(X\leq 2)<\P(Y\leq 2)$.
+\item Лучше идти к неправильным пчёлам, так как $\P(X\leq 2)<\P(Y\leq 2)$.
+\end{enumerate}
 \end{enumerate}
 
-\end{enumerate}
 
 \subsection{Контрольная работа №2, 26.12.2012}
 
@@ -330,9 +332,6 @@ $Y=2$ & 0.1 & 0.2 & $a$ \\
 \item Найдите $\E(T^2)$
 \end{enumerate}
 
-Решение: $f(s,t)=f(s)\cdot f(t|s)=\frac{1}{3s}$ при $0\leq t\leq s\leq 3$. Бонус тем, кто прочитал условие, $\P(S>T)=1$.
-\[ \E(T^2)=\int_0^3\int_0^s \frac{t^2}{3s}\,dt\,ds=1 \]
-
 \item  Для случайно выбранного домохозяйства случайные величины $X$ и $Y$ принимают значения, равные доле расходов на продукты питания и алкоголь плюс табак соответственно. Случайный вектор $(X,Y)^T$  хорошо описывается двумерным нормальным законом распределения с математическим ожиданием $(0.45, 0.16)^T$ и ковариационной матрицей
 \[
 C=0.144\cdot
@@ -363,7 +362,33 @@ U=\sqrt{\frac{(X-\E(X))^2}{\Var(X)}+\frac{(Y-\E(Y))^2}{\Var(Y)}}
 
 
 
-Решение:
+\item Вычислите (или оцените) вероятность того, что по результатам 4000 бросаний симметричной монеты,  частота выпадения герба будет отличаться от 0.5 не более, чем на $0.01$. Решите задачу с помощью неравенства Чебышёва и с помощью ЦПТ.
+
+
+
+
+
+\item Компания кабельного телевидения НВТ, Новая Вершина Телевидения, анализирует возможность присоединения к своей сети пригородов N-ска. Опросы показали, что в среднем каждые 3 из 10 семей жителей пригородов хотели бы стать абонентами сети. Стоимость работ, необходимых для организации сети в любом пригороде оценивается величиной 2\,080\,000 у.е. При подключении каждого пригорода НВТ надеется получить 1\,000\,000 у.е. в год от рекламодателей. Планируемая чистая прибыль от оплаты за кабельное телевидение одной семьей в год равна 120 у.е.
+
+Каким должно быть минимальное количество семей в пригороде для того, чтобы с вероятностью 0.99 расходы на организацию сети в этом пригороде окупились за год?
+
+
+\item Оценки за контрольную работу по теории вероятностей 6 случайно выбранных студентов оказались равны:
+
+8 5 6 7 3 9.
+
+\begin{enumerate}
+\item Выпишите вариационный ряд
+\item Постройте график выборочной функции распределения
+\item Вычислите значение выборочного среднего и выборочной дисперсии.
+\end{enumerate}
+\end{enumerate}
+
+\subsection{Контрольная работа №2, 26.12.2012, решения}
+\begin{enumerate}
+\item  $f(s,t)=f(s)\cdot f(t|s)=\frac{1}{3s}$ при $0\leq t\leq s\leq 3$. Бонус тем, кто прочитал условие, $\P(S>T)=1$.
+\[ \E(T^2)=\int_0^3\int_0^s \frac{t^2}{3s}\,dt\,ds=1 \]
+\item
 \begin{enumerate}
 \item $\P(X>0.5)=\P(Z>0.1317616)\approx 0.4475864$, $\sigma_X\approx 0.3794733$
 \item $\P(X+Y>0.5)=
@@ -377,33 +402,16 @@ $\sigma_{X+Y}=0.1697056$, $\E(X+Y)=0.61$
 \item $\P(Y>1/3\mid \tilde{X}=-0.5270463)=\P(Z>-0.0403042)=0.5160747$
 \item Ноль
 \end{enumerate}
-
-
-
-\item Вычислите (или оцените) вероятность того, что по результатам 4000 бросаний симметричной монеты,  частота выпадения герба будет отличаться от 0.5 не более, чем на $0.01$. Решите задачу с помощью неравенства Чебышёва и с помощью ЦПТ.
-
-
-
-Решение: $\E(\hat{p})=0.5$, $\Var(\hat{p})=0.25/n=1/16000$. По Чебышёву:
+\item $\E(\hat{p})=0.5$, $\Var(\hat{p})=0.25/n=1/16000$. По Чебышёву:
 \[
 \P(|\hat{p}-0.5|\leq 0.01)\geq 1-\frac{\Var(\hat{p})}{0.01^2}=\ldots=0.375
 \]
-
 Используя нормальную аппроксимацию:
 
 \[
 \P(|\hat{p}-0.5|\leq 0.01)=\P(|Z|\leq 1.2649111)\approx 0.7940968
 \]
-
-
-\item Компания кабельного телевидения НВТ, Новая Вершина Телевидения, анализирует возможность присоединения к своей сети пригородов N-ска. Опросы показали, что в среднем каждые 3 из 10 семей жителей пригородов хотели бы стать абонентами сети. Стоимость работ, необходимых для организации сети в любом пригороде оценивается величиной 2\,080\,000 у.е. При подключении каждого пригорода НВТ надеется получить 1\,000\,000 у.е. в год от рекламодателей. Планируемая чистая прибыль от оплаты за кабельное телевидение одной семьей в год равна 120 у.е.
-
-Каким должно быть минимальное количество семей в пригороде для того, чтобы с вероятностью 0.99 расходы на организацию сети в этом пригороде окупились за год?
-
-
-Решение:
-
-Обозначим $N$ — количество подключенных абонентов, тогда $N\sim Bin(n,0.3)$. При больших $n$ биномиальное распределение можно заменить на нормальное, $N\sim \cN(0.3n,0.21n)$.
+\item Обозначим $N$ — количество подключенных абонентов, тогда $N\sim Bin(n,0.3)$. При больших $n$ биномиальное распределение можно заменить на нормальное, $N\sim \cN(0.3n,0.21n)$.
 
 \[ \P(120N>1\,080\,000)=\P(N>9000)=\P\left(Z>\frac{9000-0.3n}{\sqrt{0.21n}}\right)=0.99 \]
 
@@ -414,26 +422,12 @@ $\sigma_{X+Y}=0.1697056$, $\E(X+Y)=0.61$
 
 
 Решаем квадратное уравнение, находим корни, один — отрицательный, другой, $n\approx 30622$.
+\item
 
 
-
-\item Оценки за контрольную работу по теории вероятностей 6 случайно выбранных студентов оказались равны:
-
-8 5 6 7 3 9.
-
-\begin{enumerate}
-\item Выпишите вариационный ряд
-\item Постройте график выборочной функции распределения
-\item Вычислите значение выборочного среднего и выборочной дисперсии.
-\end{enumerate}
-
-
-
-
-Решение: Вариационный ряд: 3, 5, 6, 7, 8, 9. $\bar{X}\approx 6.3333333$,
+Вариационный ряд: 3, 5, 6, 7, 8, 9. $\bar{X}\approx 6.3333333$,
 $\frac{\sum (X_i-\bar{X})^2}{n-1}\approx 4.6666667$,
 $\frac{\sum (X_i-\bar{X})^2}{n}\approx 3.8888889$
-
 
 
 
@@ -442,7 +436,7 @@ $\frac{\sum (X_i-\bar{X})^2}{n}\approx 3.8888889$
 
 
 {\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error: Cannot create:\\\#\# 	 R\_plots/empirical\_cdf.tikz \\\#\# Because the directory does not exist or is not writable.}}\end{kframe}
-\includegraphics[width=\maxwidth]{figure/empirical_cdf-1}
+\includegraphics[width=\maxwidth]{figure/empirical_cdf-1} 
 
 
 \begin{figure}
@@ -450,9 +444,6 @@ $\frac{\sum (X_i-\bar{X})^2}{n}\approx 3.8888889$
   \input{R_plots/empirical_cdf.tikz}
 \end{tikzpicture}
 \end{figure}
-
-
-
 \end{enumerate}
 
 \subsection{Демо-версия зачёта}
@@ -487,7 +478,7 @@ $\frac{\sum (X_i-\bar{X})^2}{n}\approx 3.8888889$
 \item Найдите $\Cov(R_1,R_2)$, $\Cov(R_1,R_3)$
 \end{enumerate}
 \item Ермолай Лопахин решил приступить к вырубке вишневого сада. Однако выяснилось, что растут в нём не только вишни, но и яблони. Причём, по словам Любови Андреевны Раневской, среднее количество деревьев (а они периодически погибают от холода или жары, либо из семян вырастают новые) в саду распределено в соответствии с нормальным законом ($X$ — число яблонь, $Y$ — число вишен) со следующими параметрами:
-\begin{equation}
+\begin{equation*}
 \begin{pmatrix}	X \\ 	Y 	\end{pmatrix}
 \sim \mN
 \left(
@@ -500,7 +491,7 @@ $\frac{\sum (X_i-\bar{X})^2}{n}\approx 3.8888889$
     4 & 10
     \end{pmatrix}
 \right)
-\end{equation}
+\end{equation*}
 
 \begin{enumerate}
 \item Найдите вероятность того, что Ермолаю Лопахину придется вырубить более 150~деревьев.
@@ -557,11 +548,11 @@ f(x,y)=\frac{1}{x}e^{-x},\: \text{при}\: 0<y<x
 Продолжительность 1 час 10 минут, разрешено пользоваться конспектами, книжками, заготовками программ, нельзя общаться, использовать Интернет. Текст работы в группах с R:
 
 \begin{enumerate}
-\item Величины $X$ и $Y$ независимы. Величина $X$ распределена нормально, $X\sim N(4.7,6.8)$, величина $Y$ распределена экспоненциально, $Y\sim exp(\lambda=2.8)$. Используя симуляционный подход примерно посчитайте
+\item Величины $X$ и $Y$ независимы. Величина $X$ распределена нормально, $X\sim \cN(4.5,6.3)$, величина $Y$ распределена экспоненциально, $Y\sim exp(\lambda=2.4)$. Используя симуляционный подход примерно посчитайте
 
 \begin{enumerate}
-\item $\P(X+Y>5.3)$
-\item $\E(X/(X+9Y))$
+\item $\P(X+Y>5.5)$
+\item $\E(X/(X+5Y))$
 \item $\Var(XY)$
 \item $\Cov(XY,X/Y)$
 \end{enumerate}
@@ -648,7 +639,7 @@ $\P()$ & $0.4$ & $0.2$ & $?$ \\
 \otvet{0}{1/3}{1/2}{2/3}{1}
 
 %6
-\item Есть пять случайных величин: $X\sim \chi^2_{10}$, $Y\sim F_{5,10}$, $T\sim t_{10}$, $Z\sim N(0,1)$, $W\sim N(10,1)$. Какие из величин распределены симметрично относительно 0?
+\item Есть пять случайных величин: $X\sim \chi^2_{10}$, $Y\sim F_{5,10}$, $T\sim t_{10}$, $Z\sim \cN(0,1)$, $W\sim \cN(10,1)$. Какие из величин распределены симметрично относительно 0?
 
 \otvet {X, Y, Z}{Z, W}{Z, T}{Z}{X, Y}
 
@@ -668,7 +659,7 @@ $\P()$ & $0.4$ & $0.2$ & $?$ \\
 \otvet{0}{0.5}{1}{$\E(X)$}{$+\infty$}
 
 %10
-\item Если $X\sim N(-4;1)$, то $\P(3X+571>0)$ примерно равна
+\item Если $X\sim \cN(-4;1)$, то $\P(3X+571>0)$ примерно равна
 
 \otvet{0}{0.5}{1}{$+\infty$}{нет верного ответа}
 
@@ -836,15 +827,15 @@ $\P()$ & $0.4$ & $0.2$ & $?$ \\
 \item В таблице представлены данные по количеству пассажиров «Титаника», поделенные на группы по классу каюты:
 
 % latex table generated in R 3.4.2 by xtable 1.8-2 package
-% Thu Oct 12 14:51:05 2017
+% Sun Oct 15 10:34:23 2017
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrr}
   \hline
- & 1 класс & 2 класс & 3 класс \\
+ & 1 класс & 2 класс & 3 класс \\ 
   \hline
-Погиб & 122 & 167 & 528 \\
-  Выжил & 203 & 118 & 178 \\
+Погиб & 122 & 167 & 528 \\ 
+  Выжил & 203 & 118 & 178 \\ 
    \hline
 \end{tabular}
 \end{table}
@@ -859,7 +850,6 @@ $\P()$ & $0.4$ & $0.2$ & $?$ \\
 \end{enumerate}
 
 \end{enumerate}
-
 
 \section{2013-2014}
 
@@ -979,7 +969,8 @@ $Y=1$ & $0$ & $0.2$ \\ \hline
 \item Можно ли утверждать, что случайные величины зависимы?
 \end{enumerate}
 
-\item{Бонусная задача}
+\item Бонусная задача
+
 Какова вероятность того, что наугад выбранный ответ на этот вопрос окажется верным (искомую вероятность вычислить и записать!)?
 \begin{enumerate}
 \item 0.25
@@ -1310,9 +1301,10 @@ $Pr(Y=\cdot)$ & 0.3 & 0.5 & 0.2
 \end{multline}
  Так как $\Cov(X, Y) \ne 0$ — величины зависимы
 
-\item[Бонусная задача]
-  Предположим, что правильный ответ 0.25. Но это невозможно, потому что вариантов ответа 0.25 — два (1 и 4), значит ответ 0.5 тоже был бы правильный. Предположим, что правильный 0.5. Тогда 0.25 тоже правильный — таких вариантов два из четырех, значит вероятность попасть в 0.25, выбрав ответ наугад, равна 0.5. Ответ 0.6, очевидно, неверен, потому что вероятность попасть в него равна 0.25. \\
- \textbf{Правильный ответ:} 0
+\item Бонусная задача
+
+Предположим, что правильный ответ 0.25. Но это невозможно, потому что вариантов ответа 0.25 — два (1 и 4), значит ответ 0.5 тоже был бы правильный. Предположим, что правильный 0.5. Тогда 0.25 тоже правильный — таких вариантов два из четырех, значит вероятность попасть в 0.25, выбрав ответ наугад, равна 0.5. Ответ 0.6, очевидно, неверен, потому что вероятность попасть в него равна 0.25. \\
+\textbf{Правильный ответ:} 0
 \end{enumerate}
 
 
@@ -1702,7 +1694,7 @@ f(x) = F'(x) = \frac{e^x}{(1+e^x)^2}
 
 
 {\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error: Cannot create:\\\#\# 	 R\_plots/logis\_pdf.tikz \\\#\# Because the directory does not exist or is not writable.}}\end{kframe}
-\includegraphics[width=\maxwidth]{figure/logis_pdf-1}
+\includegraphics[width=\maxwidth]{figure/logis_pdf-1} 
 
 
 \begin{figure}
@@ -1996,106 +1988,6 @@ P[n\text{-ый не сядет на свое место}] = \P(A_n) + P[A_{n-1}]
 
 \end{enumerate}
 
-
-
-
-
-\subsubsection*{Разбалловка}
-Часть 1
-
-\begin{enumerate}
-\item
-\begin{enumerate}
-\item 2 балла
-\item 4 балла
-\item 4 балла
-\end{enumerate}
-
-\item
-\begin{enumerate}
-\item мат. ожидание — 3 балла, дисперсия — 3 балла
-\item распределение — 3 балла, знак неравенства — 1 балл
-
-\end{enumerate}
-
-\item
-\begin{enumerate}
-\item 2 балла
-\item все по 1 баллу
-\item каждая вероятность — 1.5 балла
-\item 2 балла
-
-\end{enumerate}
-
-\item
-\begin{enumerate}
-\item все по 1 баллу
-\item первая ковариация — 3 балла, вторая — 2 балла
-\item 2 балла
-\end{enumerate}
-
-
-
-\item 10 или 0
-
-\item
-\begin{enumerate}
-\item явный вид 2, приближение Пуассона 2
-\item наиболее вероятное число 2, математическое ожидание 1, дисперсия 1
-\item 2
-\end{enumerate}
-
-\item
-\begin{enumerate}
-\item математические ожидание 2.5, дисперсии 2.5
-\item для бесполезных и неинтересных 2.5, с хотя бы одним из свойств 2.5
-
-\end{enumerate}
-
-\item
-\begin{enumerate}
-\item константы $a$ и $b$ 5
-\item математическое ожидание 2
-\item третий начальный момент, медиана и мода -- по 1
-\end{enumerate}
-\end{enumerate}
-
-Часть 2
-
-\begin{enumerate}
-\item
-\begin{enumerate}
-\item каждая вероятность — 1 балл
-\item каждое мат. ожидание — 2 балла
-\item 1 балл
-\end{enumerate}
-
-\item
-\begin{enumerate}
-\item каждая вероятность — 1.5 балла
-\item первое мат. ожидание — 1.5 балла, последние два мат. ожидания — по 2 балла
-
-\end{enumerate}
-
-\item
-\begin{enumerate}
-\item 6 баллов
-\item 4 балла
-\end{enumerate}
-\item
-\begin{enumerate}
-\item $\P(X=50)$ — 2
-\item $\E[X]$ — 4
-\item $\Var(X)$ — 4
-\end{enumerate}
-
-\item
-\begin{enumerate}
-\item 2
-\item 4
-\item 4
-\end{enumerate}
-\end{enumerate}
 
 
 \subsection{Контрольная работа 2. Базовый поток. 15.12.2014}
