--- a/probability_hse_exams.Rnw
+++ b/probability_hse_exams.Rnw
@@ -114,7 +114,7 @@ options(scipen = 10)
 Уникальное предложение для студентов факультета экономики ГУ-ВШЭ:
 
 
-Найдите ошибки в этом документе или пришлите отсутствующие решения в техе и получите дополнительные бонусы к итоговой оценке! Найденные смысловые ошибки поощряются сильнее, чем просто опечатки. Письма с замеченными ошибками и решениями пишите на адрес \href{mailto:boris.demeshev@gmail.com}{boris.demeshev@gmail.com}. Перед отправкой письма, пожалуйста, свертесь со свежей версией этой подборки.
+Найдите ошибки в этом документе или пришлите отсутствующие решения в техе и получите дополнительные бонусы! Найденные смысловые ошибки поощряются сильнее, чем просто опечатки. Замеченные ошибки и новые решения оформляйте в виде issues на \url{https://github.com/bdemeshev/probability_hse_exams/issues/}. Перед публикацией issue, пожалуйста, свертесь со свежей версией подборки.
 
 Неполный список благодарностей:
 
