--- a/probability_hse_exams.tex
+++ b/probability_hse_exams.tex
@@ -149,7 +149,7 @@
 Уникальное предложение для студентов факультета экономики ГУ-ВШЭ:
 
 
-Найдите ошибки в этом документе или пришлите отсутствующие решения в техе и получите дополнительные бонусы к итоговой оценке! Найденные смысловые ошибки поощряются сильнее, чем просто опечатки. Письма с замеченными ошибками и решениями пишите на адрес \href{mailto:boris.demeshev@gmail.com}{boris.demeshev@gmail.com}. Перед отправкой письма, пожалуйста, свертесь со свежей версией этой подборки.
+Найдите ошибки в этом документе или пришлите отсутствующие решения в техе и получите дополнительные бонусы! Найденные смысловые ошибки поощряются сильнее, чем просто опечатки. Замеченные ошибки и новые решения оформляйте в виде issues на \url{https://github.com/bdemeshev/probability_hse_exams/issues/}. Перед публикацией issue, пожалуйста, свертесь со свежей версией подборки.
 
 Неполный список благодарностей:
 
@@ -548,11 +548,11 @@ f(x,y)=\frac{1}{x}e^{-x},\: \text{при}\: 0<y<x
 Продолжительность 1 час 10 минут, разрешено пользоваться конспектами, книжками, заготовками программ, нельзя общаться, использовать Интернет. Текст работы в группах с R:
 
 \begin{enumerate}
-\item Величины $X$ и $Y$ независимы. Величина $X$ распределена нормально, $X\sim \cN(4.2,6.1)$, величина $Y$ распределена экспоненциально, $Y\sim exp(\lambda=2.6)$. Используя симуляционный подход примерно посчитайте
+\item Величины $X$ и $Y$ независимы. Величина $X$ распределена нормально, $X\sim \cN(4.2,6.1)$, величина $Y$ распределена экспоненциально, $Y\sim exp(\lambda=2.9)$. Используя симуляционный подход примерно посчитайте
 
 \begin{enumerate}
-\item $\P(X+Y>5.3)$
-\item $\E(X/(X+8Y))$
+\item $\P(X+Y>5.1)$
+\item $\E(X/(X+4Y))$
 \item $\Var(XY)$
 \item $\Cov(XY,X/Y)$
 \end{enumerate}
@@ -826,8 +826,8 @@ $\P(\cdot)$ & $0.4$ & $0.2$ & ?   \\ \bottomrule
 
 \item В таблице представлены данные по количеству пассажиров «Титаника», поделенные на группы по классу каюты:
 
-% latex table generated in R 3.4.2 by xtable 1.8-2 package
-% Thu Oct 19 18:14:07 2017
+% latex table generated in R 3.4.0 by xtable 1.8-2 package
+% Mon Oct 23 18:18:26 2017
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrr}
