solutions and clean up

--- a/tests/2014_midterm_retake.tex
+++ b/tests/2014_midterm_retake.tex
@@ -200,11 +200,11 @@
 \rule{\textwidth}{1pt}
 \textbf{В вопросах 13-16} совместное распределение пары величин $X$ и $Y$ задано таблицей:
 
-\begin{tabular}{c|ccc}
- & $Y=-1$ & $Y=0$ & $Y=1$ \\
-\hline
-$X=-1$ & $1/4$ & $0$  &  $1/4$\\
-$X=1$ & $1/6$ & $1/6$ &  $1/6$ \\
+\begin{tabular}{@{}c|ccc@{}}
+\toprule
+       & $Y=-1$ & $Y=0$ & $Y=1$ \\ \midrule
+$X=-1$ & $1/4$  & $0$   & $1/4$ \\
+$X=1$  & $1/6$  & $1/6$ & $1/6$ \\ \bottomrule
 \end{tabular}
 
 \vspace{0.5cm}
