--- a/tests/2015_final.tex
+++ b/tests/2015_final.tex
@@ -34,7 +34,7 @@
 \element{prob_one_sample}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
   \begin{questionmult}{3} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
-  Требуется проверить гипотезу о равенстве дисперсий по двум нормальным выборкам размером $20$ и $16$ наблюдений. Несмещённая оценка дисперсии по первой выборке составила $60$, по второй --- $90$. Тестовая статистика может быть равна
+  Требуется проверить гипотезу о равенстве дисперсий по двум нормальным выборкам размером $20$ и $16$ наблюдений. Несмещённая оценка дисперсии по первой выборке составила $60$, по второй — $90$. Тестовая статистика может быть равна
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
       \correctchoice{$1.5$}
