--- a/tests/2015_midterm.tex
+++ b/tests/2015_midterm.tex
@@ -213,7 +213,7 @@
 }
 
 \element{commontext}{
-\newpage
+%\newpage
 \rule{\textwidth}{1pt} %2015ready
 \textbf{В вопросах 13-16} совместное распределение пары величин $X$ и $Y$ задано таблицей:
 
@@ -368,7 +368,7 @@ d, x > 2.\\
 }
 
 \element{commontext3}{ %2015ready
-\newpage
+%\newpage
 \rule{\textwidth}{1pt}
 \textbf{В вопросах 20-23} совместная функция плотности пары $X$ и $Y$ имеет вид
 \[
