--- a/probability_hse_exams.tex
+++ b/probability_hse_exams.tex
@@ -255,7 +255,7 @@ $Y=2$ & $0.1$  & $0.2$ & $a$   \\ \bottomrule
 \item Найдите корреляцию $\Corr(X,Y)$
 \end{enumerate}
 
-\item Винни Пух собрался полакомиться медом, но ему необходимо принять решение, к каким пчелам отправиться за медом. Неправильные пчелы кусают каждого, кто лезет к ним на дерево с вероятностью 0,9, но их всего 10 штук. Правильные пчелы кусаются с вероятностью 0,1, но их 100 штук.
+\item Винни Пух собрался полакомиться медом, но ему необходимо принять решение, к каким пчелам отправиться за медом. Неправильные пчелы кусают каждого, кто лезет к ним на дерево с вероятностью 0.9, но их всего 10 штук. Правильные пчелы кусаются с вероятностью 0.1, но их 100 штук.
 \begin{enumerate}
 \item  Определите математическое ожидание и дисперсию числа укусов Винни Пуха для каждого случая
 \item Определите наиболее вероятное число укусов и его вероятность для каждого случая
@@ -436,7 +436,7 @@ $\frac{\sum (X_i-\bar{X})^2}{n}\approx 3.8888889$
 
 
 {\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error: Cannot create:\\\#\# 	 R\_plots/empirical\_cdf.tikz \\\#\# Because the directory does not exist or is not writable.}}\end{kframe}
-\includegraphics[width=\maxwidth]{figure/empirical_cdf-1} 
+\includegraphics[width=\maxwidth]{figure/empirical_cdf-1}
 
 
 \begin{figure}
@@ -548,10 +548,10 @@ f(x,y)=\frac{1}{x}e^{-x},\: \text{при}\: 0<y<x
 Продолжительность 1 час 10 минут, разрешено пользоваться конспектами, книжками, заготовками программ, нельзя общаться, использовать Интернет. Текст работы в группах с R:
 
 \begin{enumerate}
-\item Величины $X$ и $Y$ независимы. Величина $X$ распределена нормально, $X\sim \cN(4.2,6.1)$, величина $Y$ распределена экспоненциально, $Y\sim exp(\lambda=2.9)$. Используя симуляционный подход примерно посчитайте
+\item Величины $X$ и $Y$ независимы. Величина $X$ распределена нормально, $X\sim \cN(4.7,6.2)$, величина $Y$ распределена экспоненциально, $Y\sim \exp(\lambda=2.9)$. Используя симуляционный подход примерно посчитайте
 
 \begin{enumerate}
-\item $\P(X+Y>5.1)$
+\item $\P(X+Y>5.3)$
 \item $\E(X/(X+4Y))$
 \item $\Var(XY)$
 \item $\Cov(XY,X/Y)$
@@ -715,7 +715,7 @@ $\P(\cdot)$ & $0.4$ & $0.2$ & ?   \\ \bottomrule
 %16
 \item $Z_1,Z_2,\ldots,Z_n\sim\N(0,1)$. Тогда величина $\frac{Z_1\sqrt{n-2}}{\sqrt{\sum_{i=3}^n Z_i^2}}$ имеет распределение
 
-\otvet {$N(0,1)$}{$t_n$}{$F_{1,n-2}$}{$\chi^2_n$}{$t_{n-2}$}
+\otvet {$\cN(0,1)$}{$t_n$}{$F_{1,n-2}$}{$\chi^2_n$}{$t_{n-2}$}
 
 %17
 \item Количество страниц в книгах авторов $X$ и $Y$ распределено нормально с дисперсиями $\sigma^2_X$ и $\sigma^2_Y$ соответственно. Для тестирования гипотезы о равенстве дисперсий было выбрано $n$ книг автора $X$ и $m$ книг — автора $Y$. Какое распределение имеет статистика, используемая в данном случае?
@@ -740,7 +740,7 @@ $\P(\cdot)$ & $0.4$ & $0.2$ & ?   \\ \bottomrule
 %21
 \item Если $X_i$ независимы и имеют нормальное распределение $N(-1;2013)$, то $\sqrt{n}(1+\bar{X})/\hat{\sigma}$ имеет распределение
 
-\otvet{$N(0;1)$}{$t_{n-1}$}{$\chi^2_{n-1}$}{$N(0;2013/n)$}{$t_n$}
+\otvet{$\cN(0;1)$}{$t_{n-1}$}{$\chi^2_{n-1}$}{$N(0;2013/n)$}{$t_n$}
 
 %22
 \item Последовательность оценок $\hat{\theta}_1$, $\hat{\theta}_2$, \ldots называется состоятельной, если
@@ -826,16 +826,16 @@ $\P(\cdot)$ & $0.4$ & $0.2$ & ?   \\ \bottomrule
 
 \item В таблице представлены данные по количеству пассажиров «Титаника», поделенные на группы по классу каюты:
 
-% latex table generated in R 3.4.0 by xtable 1.8-2 package
-% Mon Oct 23 18:18:26 2017
+% latex table generated in R 3.4.2 by xtable 1.8-2 package
+% Wed Oct 25 14:40:47 2017
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrr}
   \hline
- & 1 класс & 2 класс & 3 класс \\ 
+ & 1 класс & 2 класс & 3 класс \\
   \hline
-Погиб & 122 & 167 & 528 \\ 
-  Выжил & 203 & 118 & 178 \\ 
+Погиб & 122 & 167 & 528 \\
+  Выжил & 203 & 118 & 178 \\
    \hline
 \end{tabular}
 \end{table}
@@ -893,7 +893,7 @@ $\P(\cdot)$ & $0.4$ & $0.2$ & ?   \\ \bottomrule
 
 
 
-\item Вася забыл какую-то (какую?) формулу. Он помнит, что она начинается с $\P(A|B)=$. Дальше была дробь, три буквы $P$ со скобками после них и в сумме по две буквы $A$ и $B$ внутри этих скобок. Ещё там была вертикальная черта «|». Из этих элементов Вася случайным образом составляет формулу.
+\item Вася забыл какую-то (какую?) формулу. Он помнит, что она начинается с $\P(A|B) = $ . Дальше была дробь, три буквы $P$ со скобками после них и в сумме по две буквы $A$ и $B$ внутри этих скобок. Ещё там была вертикальная черта «|». Из этих элементов Вася случайным образом составляет формулу.
 \begin{enumerate}
 \item С какой вероятностью Вася напишет правильную формулу?
 \item Напишите формулу, которую забыл Вася.
@@ -936,18 +936,18 @@ f(x) =
 \item Нарисуйте функцию распределения случайной величины $X$.
 \end{enumerate}
 
-\item Вася случайным образом посещает лекции по ОВП (Очень Важному Предмету). С вероятностью $0.9$ произвольно выбранная лекция полезна, и с вероятностью $0.7$ она интересна. Полезность и интересность –-- независимые друг от друга и от номера лекции свойства. Всего Вася прослушал 30 лекций.
+\item Вася случайным образом посещает лекции по ОВП (Очень Важному Предмету). С вероятностью $0.9$ произвольно выбранная лекция полезна, и с вероятностью $0.7$ она интересна. Полезность и интересность — независимые друг от друга и от номера лекции свойства. Всего Вася прослушал 30 лекций.
 \begin{enumerate}
 \item Определите математическое ожидание и дисперсию числа полезных лекций и числа интересных лекций, прослушанных Васей.
 \item Определите математическое ожидание числа бесполезных и неинтересных лекций, прослушанных Васей, и числа лекций, обладающих хотя бы одним из свойств (полезность,  интересность).
 \end{enumerate}
 
-\item Пусть $\E [X] = 1$, $\E [Y] = 2$, $\E [X^2] = 5$, $\E[XY] = -1$. Найдите:
+\item Пусть $\E(X) = 1$, $\E(Y) = 2$, $\E(X^2) = 5$, $\E(XY) = -1$. Найдите:
 \begin{enumerate}
-\item $\E [2X + Y - 4]$
-\item $\Var[X]$, $\Var[Y]$
+\item $\E(2X + Y - 4)$
+\item $\Var(X)$, $\Var(Y)$
 \item $\Cov(X,Y)$, $\Corr(X,Y)$
-\item $\Var[X-Y-1]$,  $\Var[X+Y+1]$
+\item $\Var(X-Y-1)$,  $\Var(X+Y+1)$
 \item $\Cov(X-Y-1, X+Y+1)$,  $\Corr(X-Y-1, X+Y+1)$
 \end{enumerate}
 
@@ -1030,35 +1030,33 @@ p(k) = \P(X = k) = \frac{\lambda^k}{k!}e^{-\lambda}
 0 & \text{если нет}
 \end{cases}
 \]
-Тогда $X = \sum\limits_{i=1}^{400}X_i$. Рассмотрим отдельно $X_i$: \hspace{0.5cm}
-\begin{minipage}{0.3\linewidth}
-  \begin{tabular}{@{}ccc@{}}
-  \toprule
-  $X$         & $1$             & $0$               \\ \midrule
-  $\P(\cdot)$ & $\frac{1}{500}$ & $\frac{499}{500}$ \\ \bottomrule
-  \end{tabular}
-\end{minipage}
+Тогда $X = \sum\limits_{i=1}^{400}X_i$. Рассмотрим отдельно $X_i$:
 
+\begin{tabular}{@{}ccc@{}}
+\toprule
+$X$         & $1$             & $0$               \\ \midrule
+$\P(\cdot)$ & $\frac{1}{500}$ & $\frac{499}{500}$ \\ \bottomrule
+\end{tabular}
 
 Так как $i$-ая опечатка наугад выбирает одну страницу из 500 и это должна быть именно 13.
 
 Тогда:
 \[
-\E[X_i] = \frac{1}{500} = \E[X^2_i] \Rightarrow
+\E(X_i) = \frac{1}{500} = \E(X^2_i) \Rightarrow
 \]
 \[
-\Rightarrow \Var(X_i) = \E[X^2_i] - (\E[X_i])^2 = \frac{1}{500} - \left(\frac{1}{500}\right)^2 = \frac{499}{500^2}
+\Rightarrow \Var(X_i) = \E(X^2_i) - (\E(X_i))^2 = \frac{1}{500} - \left(\frac{1}{500}\right)^2 = \frac{499}{500^2}
 \]
 Значит
 \[
-\E[X] = \E\left[\sum\limits_{i=1}^{400}X_i\right] = \sum\limits_{i=1}^{400}\E[X_i]  = \frac{400}{500} = 0.8
+\E(X) = \E\left()\sum\limits_{i=1}^{400}X_i\right) = \sum\limits_{i=1}^{400}\E(X_i)  = \frac{400}{500} = 0.8
 \]
 
 \[
 \Var(X) = \Var\left(\sum\limits_{i=1}^{400}X_i\right) = \sum\limits_{i=1}^{400}\Var(X_i) = 400\cdot\frac{499}{500^2} = 0.8\cdot\frac{499}{500}
 \]
 
-Теперь мы знаем, что $\lambda = \E[X] = 0.8$ поэтому можем вернуться к пункту (а):
+Теперь мы знаем, что $\lambda = \E(X) = 0.8$ поэтому можем вернуться к пункту (а):
 \[
 \P(X \geqslant 2) = 1 - \P(X=0) - \P(X=1)  = 1 - \frac{0.8^0}{0!}e^{-0.8} - \frac{0.8^1}{1!}e^{-0.8} = 0.1912079
 \] \vspace{-1.2cm}
@@ -1173,26 +1171,25 @@ $F(x) = \begin{cases}
 \end{cases}
 \]
 
-Тогда $X_A = \sum\limits_{i=1}^{30}X_i$. Рассмотрим отдельно $X_i$: \hspace{0.5cm}
-\begin{minipage}{0.3\linewidth}
-  \begin{tabular}{@{}ccc@{}}
-  \toprule
-  $X$         & $1$             & $0$               \\ \midrule
-  $\P(\cdot)$ & $0.9$ & $0.1$ \\ \bottomrule
-  \end{tabular}
-\end{minipage}
+Тогда $X_A = \sum\limits_{i=1}^{30}X_i$. Рассмотрим отдельно $X_i$:
+
+\begin{tabular}{@{}ccc@{}}
+\toprule
+$X$         & $1$             & $0$               \\ \midrule
+$\P(\cdot)$ & $0.9$ & $0.1$ \\ \bottomrule
+\end{tabular}
 
 Вероятность 0.9 дана. Тогда:
 \[
-\E[X_i] = 0.9 = \E[X^2_i] \Rightarrow
+\E(X_i) = 0.9 = \E(X^2_i) \Rightarrow
 \]
 \[
-\Rightarrow \Var(X_i) = \E[X^2_i] - (\E[X_i])^2 = 0.9 - 0.9^2 = 0.09
+\Rightarrow \Var(X_i) = \E(X^2_i) - (\E(X_i))^2 = 0.9 - 0.9^2 = 0.09
 \]
 
 Значит
 \[
-\E[X_A] = \E\left[\sum\limits_{i=1}^{30}X_i\right] = \sum\limits_{i=1}^{30}\E[X_i]  = 0.9\cdot30 = 27
+\E(X_A) = \E\left()\sum\limits_{i=1}^{30}X_i\right) = \sum\limits_{i=1}^{30}\E(X_i)  = 0.9\cdot30 = 27
 \]
 \[
 \Var(X_A) = \Var\left(\sum\limits_{i=1}^{30}X_i\right) = \sum\limits_{i=1}^{30}\Var(X_i) = 0.09\cdot30 = 2.7
@@ -1200,7 +1197,7 @@ $F(x) = \begin{cases}
 
 Аналогично для числа интересных лекций можем получить:
 \[
-\E[X_B] = 0.7\cdot 30 = 21
+\E(X_B) = 0.7\cdot 30 = 21
 \]
 \[
 \Var(X_A) = 0.21\cdot 30 = 6.3
@@ -1211,31 +1208,31 @@ $F(x) = \begin{cases}
  $\P(\overline{A} \cap \overline{B}) = \P(\overline{A})\cdot \P(\overline{B}) = 0.3\cdot0.1 = 0.03$, где $\overline{A}$ значит «не $A$». В свою очередь:\\
  $\P(A\cup B) = \P(A\cap\overline{B}) + \P(B\cap\overline{A}) + \P(A\cap B) = 1 - \P(\overline{A})\cdot \P(\overline{B}) = 0.97$ , где $(A\cup B)$ значит «$A$ или $B$», а $(A\cap)B$ — «$A$ и $B$». Аналогично, путем введения бинарной случайной величины можем получить:
  \[
- \E[X_{\overline{A} \cap \overline{B}}] = 0.03 \cdot  30 = 0.9
+ \E(X_{\overline{A} \cap \overline{B}}) = 0.03 \cdot  30 = 0.9
  \]
  \[
- \E[X_{A\cup B}] = 0.97\cdot30 = 29.1
+ \E(X_{A\cup B}) = 0.97\cdot30 = 29.1
 \]
 
 \end{enumerate}
 
 \item
-Дано: $\E[X] = 1$, $\E[Y] = 2$, $\E[X^2] = 5$, $\E[Y^2] = 8$, $\E[XY] = -1$.
+Дано: $\E(X) = 1$, $\E(Y) = 2$, $\E(X^2) = 5$, $\E(Y^2) = 8$, $\E(XY) = -1$.
 
 Будем использовать только свойства математического ожидания, ковариации и дисперсии, и ничего больше. Ни-че-го.
 
 \begin{itemize}
-\item  $\E[2X + Y - 4] = 2\E[X] + \E[Y] + \E[-4] = 2 + 2 - 4 = 0 $
-\item $\Var(X) = \E[X^2] - (\E[X])^2 = 5 - 1 = 4 $
-\item $\Var(Y) = \E[Y^2] - (\E[Y])^2 = 8 - 4 = 4 $
-\item $\Cov(X, Y) = \E[XY] - \E[X]\E[Y] = -1 - 2 = -3$
+\item  $\E(2X + Y - 4) = 2\E(X) + \E(Y) + \E(-4) = 2 + 2 - 4 = 0 $
+\item $\Var(X) = \E(X^2) - (\E(X))^2 = 5 - 1 = 4 $
+\item $\Var(Y) = \E(Y^2) - (\E(Y))^2 = 8 - 4 = 4 $
+\item $\Cov(X, Y) = \E(XY) - \E(X)\E(Y) = -1 - 2 = -3$
 \item $\Corr(X, Y) = \frac{\Cov(X, Y)}{\sqrt{\Var(X)}\sqrt{\Var(Y)}} = -\frac{3}{2\cdot 2} = -0.75$
 \item $\Var(X-Y-1) = \Var(X) + \Var(Y) - 2\Cov(X, Y) = 4+4 -2(-3) = 14$
 \item $\Var(X+Y+1) = \Var(X) + \Var(Y) + 2\Cov(X, Y) = 4+4+2(-3) =2 $
 \item \begin{multline}
-\Cov(X-Y-1, X+Y+1)=\E[(X-Y)(X+Y)]-\E[X-Y]\E[X+Y] = \\
-\E[X^2-Y^2] - (\E[X]-\E[Y])(\E[X] + \E[Y]) =
-\E[X^2] - \E[Y^2] - ((\E[X])^2 -(\E[Y])^2)=\\
+\Cov(X-Y-1, X+Y+1)=\E((X-Y)(X+Y))-\E(X-Y)\E(X+Y) = \\
+\E(X^2-Y^2) - (\E(X)-\E(Y))(\E(X) + \E(Y)) =
+\E(X^2) - \E(Y^2) - ((\E(X))^2 -(\E(Y))^2)=\\
  = \Var(X)-\Var(Y) = 0
  \end{multline}
  \item $\Cov(X-Y-1, X+Y+1)=0 \Rightarrow \Corr(X-Y-1, X+Y+1) = 0 $
@@ -1272,7 +1269,7 @@ $\P(\cdot)$ & $0.5$ & $0.5$ \\ \bottomrule
 \end{center}
 А ковариация:
  \begin{multline*}
- \Cov(X, Y) = \E[XY] - \E[X]\E[Y] =
+ \Cov(X, Y) = \E(XY) - \E(X)\E(Y) =
  ((-1)\cdot 1\cdot0.1 + (-1)\cdot2 \cdot 0.2 + 1\cdot2\cdot 0.2) -\\
  - (0.3\cdot1 + 0.7 \cdot 2)\cdot(0.3\cdot(-1) + 0.1\cdot 0.2) = 0.07
 \end{multline*}
@@ -1450,6 +1447,7 @@ $\Var(X) = \E(X^2) - (\E(X))^2 = 0\cdot 0.1 + 1 \cdot 0.3 + 4 \cdot 0.2 + 9 \cdo
 \item Раз ребенок выбран, значит, в его семье дети есть! Всего детей $n\E(X) = 1.9n$. Семей с одним ребенком — $0.3n$, значит, детей из семей с одним ребенком — $0.3n$. Аналогично, детей из семей с двумя детьми — $0.4n$; детей из семей с тремя детьми — $1.2n$.
 
 Теперь легко построить закон распределения случайной величины $Y$:
+
 \begin{tabular}{cccc}
 \toprule
 $Y$ & $1$ & $2$ & $3$  \\ \midrule
@@ -1532,33 +1530,33 @@ p(k) = \P(X = k) = \frac{\lambda^k}{k!}e^{-\lambda}
 0 & \text{если нет}
 \end{cases}
 \]
-Тогда $X = \sum\limits_{i=1}^{400}X_i$. Рассмотрим отдельно $X_i$: \hspace{0.5cm}
-\begin{minipage}{0.3\linewidth}
+Тогда $X = \sum\limits_{i=1}^{400}X_i$. Рассмотрим отдельно $X_i$:
+
 \begin{tabular}{@{}ccc@{}}
 \toprule
 $X$         & $1$             & $0$               \\ \midrule
 $\P(\cdot)$ & $\frac{1}{500}$ & $\frac{499}{500}$ \\ \bottomrule
 \end{tabular}
-\end{minipage}
+
 Так как $i$-ая опечатка наугад выбирает одну страницу из 500 и это должна быть именно 13.
 
 Тогда:
 \[
-\E[X_i] = \frac{1}{500} = \E[X^2_i] \Rightarrow
+\E(X_i) = \frac{1}{500} = \E(X^2_i) \Rightarrow
 \]
 \[
-\Rightarrow \Var(X_i) = \E[X^2_i] - (\E[X_i])^2 = \frac{1}{500} - \left(\frac{1}{500}\right)^2 = \frac{499}{500^2}
+\Rightarrow \Var(X_i) = \E(X^2_i) - (\E(X_i))^2 = \frac{1}{500} - \left(\frac{1}{500}\right)^2 = \frac{499}{500^2}
 \]
 Значит
 \[
-\E[X] = \E\left[\sum\limits_{i=1}^{400}X_i\right] = \sum\limits_{i=1}^{400}\E[X_i]  = \frac{400}{500} = 0.8
+\E(X) = \E\left(\sum\limits_{i=1}^{400}X_i\right) = \sum\limits_{i=1}^{400}\E(X_i)  = \frac{400}{500} = 0.8
 \]
 
 \[
 \Var(X) = \Var\left(\sum\limits_{i=1}^{400}X_i\right) = \sum\limits_{i=1}^{400}\Var(X_i) = 400\cdot\frac{499}{500^2} = 0.8\cdot\frac{499}{500}
 \]
 
-Теперь мы знаем, что $\lambda = \E[X] = 0.8$ поэтому можем вернуться к пункту (а):
+Теперь мы знаем, что $\lambda = \E(X) = 0.8$ поэтому можем вернуться к пункту (а):
 \[
 \P(X \geqslant 2) = 1 - \P(X=0) - \P(X=1)  = 1 - \frac{0.8^0}{0!}e^{-0.8} - \frac{0.8^1}{1!}e^{-0.8} = 0.1912079
 \] \vspace{-1.2cm}
@@ -1592,26 +1590,25 @@ $\P(\cdot)$ & $\frac{1}{500}$ & $\frac{499}{500}$ \\ \bottomrule
 \end{cases}
 \]
 
-Тогда $X_A = \sum\limits_{i=1}^{30}X_i$. Рассмотрим отдельно $X_i$: \hspace{0.5cm}
-\begin{minipage}{0.3\linewidth}
-  \begin{tabular}{@{}ccc@{}}
-  \toprule
-  $X$         & $1$             & $0$               \\ \midrule
-  $\P(\cdot)$ & $0.9$ & $0.1$ \\ \bottomrule
-  \end{tabular}
-\end{minipage}
+Тогда $X_A = \sum\limits_{i=1}^{30}X_i$. Рассмотрим отдельно $X_i$:
+
+\begin{tabular}{@{}ccc@{}}
+\toprule
+$X$         & $1$             & $0$               \\ \midrule
+$\P(\cdot)$ & $0.9$ & $0.1$ \\ \bottomrule
+\end{tabular}
 
 Вероятность 0.9 дана. Тогда:
 \[
-\E[X_i] = 0.9 = \E[X^2_i] \Rightarrow
+\E(X_i) = 0.9 = \E(X^2_i) \Rightarrow
 \]
 \[
-\Rightarrow \Var(X_i) = \E[X^2_i] - (\E[X_i])^2 = 0.9 - 0.9^2 = 0.09
+\Rightarrow \Var(X_i) = \E(X^2_i) - (\E(X_i))^2 = 0.9 - 0.9^2 = 0.09
 \]
 
 Значит
 \[
-\E[X_A] = \E\left[\sum\limits_{i=1}^{30}X_i\right] = \sum\limits_{i=1}^{30}\E[X_i]  = 0.9\cdot30 = 27
+\E(X_A) = \E\left(\sum\limits_{i=1}^{30}X_i\right) = \sum\limits_{i=1}^{30}\E(X_i)  = 0.9\cdot30 = 27
 \]
 \[
 \Var(X_A) = \Var\left(\sum\limits_{i=1}^{30}X_i\right) = \sum\limits_{i=1}^{30}\Var(X_i) = 0.09\cdot30 = 2.7
@@ -1619,7 +1616,7 @@ $\P(\cdot)$ & $\frac{1}{500}$ & $\frac{499}{500}$ \\ \bottomrule
 
 Аналогично для числа интересных лекций можем получить:
 \[
-\E[X_B] = 0.7\cdot 30 = 21
+\E(X_B) = 0.7\cdot 30 = 21
 \]
 \[
 \Var(X_B) = 0.21\cdot 30 = 6.3
@@ -1630,10 +1627,10 @@ $\P(\cdot)$ & $\frac{1}{500}$ & $\frac{499}{500}$ \\ \bottomrule
  $\P(\overline{A} \cap \overline{B}) = \P(\overline{A})\cdot \P(\overline{B}) = 0.3\cdot0.1 = 0.03$, где $\overline{A}$ значит «не $A$». В свою очередь:\\
  $\P(A\cup B) = \P(A\cap\overline{B}) + \P(B\cap\overline{A}) + \P(A\cap B) = 1 - \P(\overline{A})\cdot \P(\overline{B}) = 0.97$ , где $(A\cup B)$ значит «$A$  или $B$». Аналогично, путем введения бинарной случайной величины можем получить:
  \[
- \E[X_{\overline{A} \cap \overline{B}}] = 0.03 \cdot  30 = 0.9
+ \E(X_{\overline{A} \cap \overline{B}}) = 0.03 \cdot  30 = 0.9
  \]
  \[
- \E[X_{A\cup B}] = 0.97\cdot30 = 29.1
+ \E(X_{A\cup B}) = 0.97\cdot30 = 29.1
 \]
 \end{enumerate}
 
@@ -1667,7 +1664,7 @@ f(x) = F'(x) = \frac{e^x}{(1+e^x)^2}
 
 
 {\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error: Cannot create:\\\#\# 	 R\_plots/logis\_pdf.tikz \\\#\# Because the directory does not exist or is not writable.}}\end{kframe}
-\includegraphics[width=\maxwidth]{figure/logis_pdf-1} 
+\includegraphics[width=\maxwidth]{figure/logis_pdf-1}
 
 
 \begin{figure}
@@ -1828,11 +1825,11 @@ $\P(\cdot)$ & $1/3$ & $2/3$ \\ \bottomrule
 
 Теперь введем понятие «шаг». Переход на новый шаг происходит в тот момент, когда покупатель получил наклейку, которой у него раньше не было. Начинаем с шага 0, когда нет ни одной наклейки, и шагать будем до 49, потому что в момент перехода на шаг 50 Покупатель получит последнюю необходимую наклейку и «прогулка» закончится. Введем случайную величину $X_q$ равную количеству покупок в течение шага номер $q$. Тогда $X = \sum \limits_{q=0}^{49}X_q$.  Найдем математическое ожидание $X_q$:
 \[
-\E[X_q] = \frac{n-q}{n}\cdot 1 + \frac{q}{n}\cdot\frac{n-q}{n}\cdot 2 + \left(\frac{q}{n}\right)^2\cdot\frac{n-q}{n}\cdot 3 + \ldots
+\E(X_q) = \frac{n-q}{n}\cdot 1 + \frac{q}{n}\cdot\frac{n-q}{n}\cdot 2 + \left(\frac{q}{n}\right)^2\cdot\frac{n-q}{n}\cdot 3 + \ldots
 \]
 здесь $\frac{n-q}{n}$ —  это вероятность найти наклейку, которой еще нет, а $\frac{q}{n}$, соответственно — вероятность повториться. Вопрос теперь в том, как посчитать сумму:
 \[
-\E[X_q] = \frac{n-q}{n}\left( 1 + \frac{q}{n}\cdot 2 + \left(\frac{q}{n}\right)^2 \cdot 3 + \ldots\right) = \frac{n-q}{n}\cdot\sum\limits_{k=0}^{\infty}\left(\frac{q}{n}\right)^k(k+1)
+\E(X_q) = \frac{n-q}{n}\left( 1 + \frac{q}{n}\cdot 2 + \left(\frac{q}{n}\right)^2 \cdot 3 + \ldots\right) = \frac{n-q}{n}\cdot\sum\limits_{k=0}^{\infty}\left(\frac{q}{n}\right)^k(k+1)
 \]
 
 Можем выписать в столбик несколько первых членов вышестоящей суммы:
@@ -1858,12 +1855,12 @@ $\P(\cdot)$ & $1/3$ & $2/3$ \\ \bottomrule
 
 Таким образом, получаем, что:
 \[
-\E[X_q] = \frac{n-q}{n}\cdot \left( \frac{n}{n-q}\right)^2 = \frac{n}{n-q}
+\E(X_q) = \frac{n-q}{n}\cdot \left( \frac{n}{n-q}\right)^2 = \frac{n}{n-q}
 \]
 \hspace{10cm} и это верно для любого q!
 
 \[
-\E[X] = \E\left[\sum \limits_{q=0}^{49}X_q\right] = \sum \limits_{q=0}^{49}\E[X_q] =
+\E(X) = \E\left(\sum \limits_{q=0}^{49}X_q\right) = \sum \limits_{q=0}^{49}\E(X_q) =
 \frac{50}{50-0} + \frac{50}{50-1} + \dots + \frac{50}{50-49} = 50\left(\frac{1}{50} + \frac{1}{49} + \dots + 1\right) \approx
 \]
 \[
@@ -1878,14 +1875,14 @@ $\P(\cdot)$ & $1/3$ & $2/3$ \\ \bottomrule
 А те, кто забыл, могут \textbf{проще решить} методом первого шага:
 Если $X$ — число опытов до успеха при вероятности успеха $p$, то
 \[
-\E[X]=p\cdot 1 + (1-p)\cdot \E[X+1]
+\E(X)=p\cdot 1 + (1-p)\cdot \E(X+1)
 \]
-Откуда $\E[X]=\frac{1}{p}$ и дело в шляпе :)
+Откуда $\E(X)=\frac{1}{p}$ и дело в шляпе :)
 Аналогично:
 \[
-\E[X^2]=p\cdot 1^2 + (1-p) \cdot \E[(X+1)^2]
+\E(X^2)=p\cdot 1^2 + (1-p) \cdot \E((X+1)^2)
 \]
-и решая, находим $\E[X^2]$.
+и решая, находим $\E(X^2)$.
 
 
 
@@ -2108,23 +2105,23 @@ f_Y(y) = \int \limits_{0}^{1-y} f_{XY}(x,y) dx
 \item При $Y = \frac{1}{2}$, $X$ распределен равномерно от 0 до $\frac{1}{2}$, поэтому его плотность равна \[f_X(x) = \frac{1}{\frac{1}{2} - 0} = 2\]
 Соответственно, условное математическое ожидание:
 \[
-\E \left[ X| Y =\frac{1}{2}\right] = \frac{1}{4}
+\E \left( X| Y =\frac{1}{2}\right) = \frac{1}{4}
 \]
 
-\item $\E[\E[X|Y]] = \E[X]$, а маргинальную функцию плотности для $X$ мы можем найти так же, как искали для $Y$, и получим $f_X(x) = 2(1-x)$. Отсюда:
+\item $\E(\E(X|Y)) = \E(X)$, а маргинальную функцию плотности для $X$ мы можем найти так же, как искали для $Y$, и получим $f_X(x) = 2(1-x)$. Отсюда:
 \[
-\E[X] = \int \limits_{0}^{1} 2x(1-x)dx = \left .\left(x^2 - \frac{2}{3}x^3\right) \right|^{1}_{0} = \frac{1}{3}
+\E(X) = \int \limits_{0}^{1} 2x(1-x)dx = \left .\left(x^2 - \frac{2}{3}x^3\right) \right|^{1}_{0} = \frac{1}{3}
 \]
 
 \item Если вспомнить формулу для корреляции:
 \[
-\rho_{XY} = \frac{\Cov(X, Y)}{\sigma_X\sigma_Y}  = \frac{\E[XY] - \E[X]\E[Y]}{\sigma_X\sigma_Y}
+\rho_{XY} = \frac{\Cov(X, Y)}{\sigma_X\sigma_Y}  = \frac{\E(XY) - \E(X)\E(Y)}{\sigma_X\sigma_Y}
 \]
 
-то станет более-менее очевидно, что надо найти $\E[XY]$ и дисперсии $X$ и $Y$.
+то станет более-менее очевидно, что надо найти $\E(XY)$ и дисперсии $X$ и $Y$.
 
 \[
-\E[XY] = \int \limits_{0}^{1} \int \limits_{0}^{1-x} 2xy dxdy = \int \limits_{0}^{1} 2xdx \int \limits_{0}^{1-x}ydy =  \int \limits_{0}^{1}x(x^2-2x+1)dx =
+\E(XY) = \int \limits_{0}^{1} \int \limits_{0}^{1-x} 2xy dxdy = \int \limits_{0}^{1} 2xdx \int \limits_{0}^{1-x}ydy =  \int \limits_{0}^{1}x(x^2-2x+1)dx =
 \]
 \[
 = \left. \left(\frac{x^4}{4} - \frac{2}{3}x^3 + \frac{x^2}{2}\right) \right|^{1}_{0} = \frac{3}{4}-\frac{2}{3} = \frac{1}{12}
@@ -2139,12 +2136,12 @@ f_Y(y) = \int \limits_{0}^{1-y} f_{XY}(x,y) dx
 Найдем теперь дисперсии $X$ и $Y$ (они будут одинаковыми, как и математические ождания, в силу симметрии):
 
 \[
-\E[X^2] = \int \limits_{0}^{1} 2x^2(1-x)dx = \left. \left( \frac{2}{3}x^2 - \frac{x_4}{2} \right) \right|_{0}^{1} = \frac{1}{6}
+\E(X^2) = \int \limits_{0}^{1} 2x^2(1-x)dx = \left. \left( \frac{2}{3}x^2 - \frac{x_4}{2} \right) \right|_{0}^{1} = \frac{1}{6}
 \]
 
 Поэтому:
 \[
-\Var[X] = \E[X^2] - (\E[X])^2 = \frac{1}{6} - \frac{1}{9} = \frac{1}{18}
+\Var[X] = \E(X^2) - (\E(X))^2 = \frac{1}{6} - \frac{1}{9} = \frac{1}{18}
 \]
 
 Теперь наконец-то можем найти корреляцию:
@@ -2158,9 +2155,9 @@ f_Y(y) = \int \limits_{0}^{1-y} f_{XY}(x,y) dx
 \begin{enumerate}
 
 \item Закон больших чисел гласит, что $\bar{X} \rightarrow
-\E[X]$ при $n\rightarrow \infty$. Проверим его выполнение в данном случае:
+\E(X)$ при $n\rightarrow \infty$. Проверим его выполнение в данном случае:
 \[
-\E[X_n] = \frac{1}{2n}(-\sqrt{n}) + \left(1-\frac{1}{n}\right)\cdot0 + \frac{1}{2n}\sqrt{n} = 0
+\E(X_n) = \frac{1}{2n}(-\sqrt{n}) + \left(1-\frac{1}{n}\right)\cdot0 + \frac{1}{2n}\sqrt{n} = 0
 \]
 
 \[
@@ -2172,7 +2169,7 @@ f_Y(y) = \int \limits_{0}^{1-y} f_{XY}(x,y) dx
 Как вариант, можно было сказать, что дисперсия ограничена, и из этого также следует выполнение ЗБЧ.
 \item Неравенство Чебышева:
 \[
-\P(|X-\E[X]|\geqslant \varepsilon) \leqslant \frac{\Var(X)}{\varepsilon^2}
+\P(|X-\E(X)|\geqslant \varepsilon) \leqslant \frac{\Var(X)}{\varepsilon^2}
 \]
 
 Соответственно, искомую вероятность можем оценить следующим образом:
@@ -2180,12 +2177,12 @@ f_Y(y) = \int \limits_{0}^{1-y} f_{XY}(x,y) dx
 \P(|\bar{X}| \leqslant 1) = 1 -\P(|\bar{X}| \geqslant 1) \Rightarrow \P(|\bar{X}| \leqslant 1) \geqslant 1 - \frac{\Var[\bar{X}]}{1}
 \]
 \[
-\Var[\bar{X}] = \Var\left[\frac{\sum\limits_{i=1}^{n} X_i}{n}\right] = \frac{1}{n^2}\sum \limits_{i=1}^{n} \Var{X_i}
+\Var[\bar{X}] = \Var\left(\frac{\sum\limits_{i=1}^{n} X_i}{n}\right) = \frac{1}{n^2}\sum \limits_{i=1}^{n} \Var{X_i}
 \]
 В свою очередь:
 
 \[
-\E[X_i^2] = 2\cdot\frac{1}{2n}\cdot n + \left(1-\frac{1}{n}\right)\cdot0 = 1 \Rightarrow \Var[X_i] = 1 \Rightarrow \Var[\bar{X}] = \frac{1}{n}
+\E(X_i^2) = 2\cdot\frac{1}{2n}\cdot n + \left(1-\frac{1}{n}\right)\cdot0 = 1 \Rightarrow \Var[X_i] = 1 \Rightarrow \Var[\bar{X}] = \frac{1}{n}
 \]
 
 Поэтому:
@@ -2389,7 +2386,7 @@ $\P(\cdot)$ & $\frac{2}{3}$ & $\frac{1}{3}$  \\ \bottomrule
 
 Теперь можем найти математические ожидания и дисперсии:
 \[
-\E[X] = \frac{15}{2}, \hspace{0.5cm} \E[Y] = \frac{22}{3} \Rightarrow
+\E(X) = \frac{15}{2}, \hspace{0.5cm} \E(Y) = \frac{22}{3} \Rightarrow
 \]
 \[
 \Var[X] = \frac{1}{2}\cdot 64 + \frac{1}{2}\cdot 49 - \left(\frac{15}{2}\right)^2 = \frac{1}{4}
@@ -2398,10 +2395,10 @@ $\P(\cdot)$ & $\frac{2}{3}$ & $\frac{1}{3}$  \\ \bottomrule
 \Var[Y] = \frac{1}{3}\cdot 64 + \frac{2}{3}\cdot 49 - \left(\frac{22}{3}\right)^2 = \frac{2}{9}
 \]
 
-Теперь из формулы для корреляции мы можем найти $\E[XY]$:
+Теперь из формулы для корреляции мы можем найти $\E(XY)$:
 
 \[
-0.7 = \frac{\E[XY]-\frac{15}{2}\cdot\frac{22}{3}}{\sqrt{\frac{1}{4}}\sqrt{\frac{2}{9}}} \Rightarrow \E[XY] \approx 55.16499
+0.7 = \frac{\E(XY)-\frac{15}{2}\cdot\frac{22}{3}}{\sqrt{\frac{1}{4}}\sqrt{\frac{2}{9}}} \Rightarrow \E(XY) \approx 55.16499
 \]
 
 Можем составить табличку для совместного распределения, немножко подумав:
@@ -2423,7 +2420,7 @@ $\P(\cdot)$ & $\frac{2}{3}$ & $\frac{1}{3}$  \\ \bottomrule
 \end{center}
 
 \[
-\E[XY] = 49p+56\left(\frac{1}{2} - p + \frac{2}{3}-p\right) + 64\left(p-\frac{1}{6}\right) = 55.16499
+\E(XY) = 49p+56\left(\frac{1}{2} - p + \frac{2}{3}-p\right) + 64\left(p-\frac{1}{6}\right) = 55.16499
 \]
 
 \[
@@ -2446,7 +2443,7 @@ $\P(\cdot)$ & $\frac{2}{3}$ & $\frac{1}{3}$  \\ \bottomrule
 
 Согласно неравенству Чебышева:
 \[
-\P(|M-\E[M]|\geqslant10) \leqslant\frac{\Var(M)}{10^2} = 0.25
+\P(|M-\E(M)|\geqslant10) \leqslant\frac{\Var(M)}{10^2} = 0.25
 \]
 
 Поэтому данная вероятность лежит в пределах $(0, 25]$.
@@ -2500,7 +2497,7 @@ F(x) = \begin{cases}
 
 Сответственно:
 \[
-\E[X] = \int \limits_{0}^{0.3} 2x dx = x^2 |_{0}^{0.3} = 0.09
+\E(X) = \int \limits_{0}^{0.3} 2x dx = x^2 |_{0}^{0.3} = 0.09
 \]
 \end{enumerate}
 
@@ -2511,11 +2508,11 @@ F(x) = \begin{cases}
 \begin{enumerate}
 \item \[\P(X+Y > 1) = \iint \limits_{\mathcal{G}}2(x^3+y^3)dxdy = \int \limits_{0}^{1} dx \int \limits_{1-x}^{1}2(x^3+y^3)dy = \dots  = 0.8\]
 \item Для того, чтобы найти ковариацию, придется найти :
-\[\E[X] = \int\limits_{0}^{1} dx \int\limits _{0}^{1}2x(x^3+y^3)dy = \dots = 0.65\]
-\[\E[Y] = \int\limits_{0}^{1} dy \int\limits_{0}^{1}2y(x^3+y^3)dx = \dots = 0.65 \]
-\[\E[XY] = \int\limits_{0}^{1}dx\int\limits_{0}^{1}2xy(x^3+y^3)dy = \dots = 0.4\]
+\[\E(X) = \int\limits_{0}^{1} dx \int\limits _{0}^{1}2x(x^3+y^3)dy = \dots = 0.65\]
+\[\E(Y) = \int\limits_{0}^{1} dy \int\limits_{0}^{1}2y(x^3+y^3)dx = \dots = 0.65 \]
+\[\E(XY) = \int\limits_{0}^{1}dx\int\limits_{0}^{1}2xy(x^3+y^3)dy = \dots = 0.4\]
 
-Ну а потом все просто: $\Cov(X, Y) = \E[XY] - \E[X]\E[Y] = -0.0225$
+Ну а потом все просто: $\Cov(X, Y) = \E(XY) - \E(X)\E(Y) = -0.0225$
 
 \item Проверить свойство функций плотности $f_XY(x, y) = f_X(x)\cdot f_Y(y)$, а если $\Cov(X, Y) \ne 0$, то сразу зависимы. Здесь — зависимы.
 \item Да, являются.
@@ -2536,7 +2533,7 @@ F(x) = \begin{cases}
 \item Заметим, что для самих цен акций ЦПТ мы формулировать не можем ввиду того, что случайные величины коррелированы, не i.i.d. Зато мы можем сформулировать ее для независимых приращений!
 
 \( \left(\Delta X \right)_1, \ldots, \left(\Delta X \right)_{k} \) — последовательность i.i.d. случайных величин (при большом $k$) с конечными математическим ожиданием \(1/2 \) и стандартным отклонением \(3/2 \). Пусть также \( S_k = \sum_{i=1}^k \left(\Delta X \right)_j \). Тогда формулировка ЦПТ:
-\[ \frac{S_k - k/2}{3/2 \sqrt{k}} \sim N(0,1)    \]
+\[ \frac{S_k - k/2}{3/2 \sqrt{k}} \sim \cN(0,1)    \]
 \item Воспользуемся результатом ЦПТ!
 \[\P(X_{100} > 1060) = \P (1000 + S_{100} > 1060) = \P(S_{100} >60) = \]
 \[ = \P \left(\frac{S_{100} -50 }{3/2\cdot 10} > \frac{60-50}{3/2 \cdot 10}\right) = \P \left(Z > \frac{2}{3}\right) = 1-pnorm(2/3) \approx 0.25   \]
