--- a/tests/2014_final.tex
+++ b/tests/2014_final.tex
@@ -249,12 +249,14 @@
 \element{exam_15}{ % в фигурных скобках название группы вопросов
   \begin{questionmult}{q12} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
 Каждое утро в 8:00 Иван Андреевич Крылов, либо завтракает, либо уже позавтракал. В это же время кухарка либо заглядывает к Крылову, либо нет. По таблице сопряженности вычислите  статистику $\chi^2$ Пирсона для тестирования гипотезы о том, что визиты кухарки не зависят от того, позавтракал ли уже Крылов или нет.
-\begin{tabular}{c|cc}
-Время 8:00 & кухарка заходит & кухарка не заходит \\
-\hline
-Крылов завтракает & 200 & 40 \\
-Крылов уже позавтракал & 25 & 100
+
+\begin{tabular}{@{}l|cc@{}}
+\toprule
+                       & Кухарка заходит & Кухарка не заходит \\ \midrule
+Крылов завтракает      & $200$           & $40$               \\
+Крылов уже позавтракал & $25$            & $100$              \\ \bottomrule
 \end{tabular}
+
 \begin{multicols}{3} % располагаем ответы в {k} колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
       \wrongchoice{39}
@@ -503,11 +505,11 @@ $.
  Производитель мороженного попросил оценить по 10-бальной шкале два вида мороженного: с кусочками шоколада и с орешками. Было опрошено 5 человек.
 
 
- \begin{tabular}{c|ccccc}
-  & Евлампий & Аристарх & Капитолина & Аграфена & Эвридика \\
- \hline
-С крошкой & 10 & 6 & 7 & 5 & 4 \\
-С орехами & 9 & 8 & 8 & 7 & 6 \\
+ \begin{tabular}{@{}lccccc@{}}
+ \toprule
+           & Евлампий & Аристарх & Капитолина & Аграфена & Эвридика \\ \midrule
+ С крошкой & $10$     & $6$      & $7$        & $5$      & $4$      \\
+ С орехами & $9$      & $8$      & $8$        & $7$      & $6$      \\ \bottomrule
  \end{tabular}
 
 
